--- a/01 算法时间复杂度/算法时间复杂度.md
+++ b/01 算法时间复杂度/算法时间复杂度.md
@@ -1,11 +1,10 @@
-# 01 算法时间复杂度
+# 01 算法时间复杂度 -- 红果沿7-2
 
 
 
 ## 1.定义
 
 * 算法时间复杂度是指算法中基本操作的执行次数
-* 
 
 
 
@@ -16,17 +15,21 @@
 ### 1.2.1 计算时间复杂度方法
 
 * 找出算法的基本操作
+
 * 确定算法基本操作的执行次数
 
 * 找出T(n)的同数量级
   * 算法中的语句执行次数称为语句频度或时间频度，记为T(n)
   * 同数量级
     * 1，log~2~n，n，nlog~2~n，n^2^,n^3^,2^n^,n!
+  
 * 找出后f(n)=该数量级
+
 * 若T(n)/f(n)求极限可得到一常数c，则时间复杂度T(n)=O(f(n))
 
 * 总结：O( )就是对里面的多项式进行高阶无穷小计算，所以多项式T(n)进行O( )计算后只剩下影响最大的那一项被保留
-* 
+
+  
 
 
 
@@ -42,4 +45,48 @@
   O(1)<=O(log_2n)<=O(n)<=O(nlog_2n)<=O(n^2)<=O(n^3)<=\\……<=O(n^k)<=O(2^n)<=O(n!)<=O(n^n)
   $$
 
-* 
+
+
+
+# 02 王道课件 -- 算法时间复杂度
+
+
+
+## 2.1 算法时间复杂度
+
+* 算法时间复杂度：时间开销T(n)与问题规模n的关系（T表示“time”）
+
+
+
+## 2.2 时间开销与问题规模n的关系
+
+* <img src="https://cvp.oss-cn-shanghai.aliyuncs.com/picgo/202306282158229.png" alt="image-20230628215818090" style="zoom:50%;" />
+
+
+
+## 2.3 大O
+
+* 大O表示“同阶”，同等数量级。即：当n→∞时，二者之比为常数
+
+* <img src="https://cvp.oss-cn-shanghai.aliyuncs.com/picgo/202306290925455.png" alt="image-20230629092503301" style="zoom: 80%;" />
+
+* 只考虑阶数高的部分
+* 问题规模足够大时，常数项系数可以忽略
+
+
+
+## 2.4 加法规则 乘法规则
+
+* 加法规则：多项相加只保留最高阶的项且系数为1
+* 乘法规则：多项相乘都保留
+* ![image-20230629094055659](https://cvp.oss-cn-shanghai.aliyuncs.com/picgo/202306290940800.png)
+
+* $$
+  T_3(n)=n^3+n^2log_2n=O(n^3)+O(n^2log_2n)=O(n^3)
+  $$
+
+  
+
+## 2.5 算法时间复杂度阶数比较
+
+* <img src="https://cvp.oss-cn-shanghai.aliyuncs.com/picgo/202306290951568.png" alt="image-20230629095129376" style="zoom:50%;" />
