logan的导数 对数导数

--- a/01 算法时间复杂度/算法时间复杂度.md
+++ b/01 算法时间复杂度/算法时间复杂度.md
@@ -90,3 +90,11 @@
 ## 2.5 算法时间复杂度阶数比较
 
 * <img src="https://cvp.oss-cn-shanghai.aliyuncs.com/picgo/202306290951568.png" alt="image-20230629095129376" style="zoom:50%;" />
+
+
+
+## 2.5.1 log~a~n的导数 对数导数
+
+* $$
+  (log_an)'=\frac{1}{nlna}
+  $$
