指数函数导数

--- a/01 算法时间复杂度/算法时间复杂度.md
+++ b/01 算法时间复杂度/算法时间复杂度.md
@@ -1,4 +1,4 @@
-# 01 算法时间复杂度 -- 红果沿7-2
+# l01 算法时间复杂度 -- 红果沿7-2
 
 
 
@@ -98,3 +98,14 @@
 * $$
   (log_an)'=\frac{1}{nlna}
   $$
+
+
+
+## 2.5.2 a^n^的导数 指数导数
+
+* $$
+  (a^n)'=a^nlna
+  $$
+
+
+
