算法复杂度阶数口诀 指数型算法复杂度

--- a/01 算法时间复杂度/算法时间复杂度.md
+++ b/01 算法时间复杂度/算法时间复杂度.md
@@ -109,3 +109,58 @@
 
 
 
+## 2.5.3 算法时间复杂度阶数口诀
+
+* 常对幂指阶
+
+* $$
+  O(1)<O(log_2n)<O(n)<O(nlog_2n)<O(n^2)<O(n^3)……<O(2^n)<O(n!)<O(n^n)
+  $$
+
+
+
+## 2.5.4 算法时间复杂度只考虑阶数，用大O记法表示
+
+
+
+## 2.5.5 顺序执行的代码只会影响常数项，可以忽略
+
+
+
+## 2.5.6 只需挑循环中的一个基本操作分析它的执行次数与n的关系即可
+
+
+
+## 2.5.7 如果有多层嵌套循环，只需关注最深层循环循环了几次
+
+* 考虑最深层循环的循环次数与n的关系
+
+
+
+## 2.5.8 指数递增型爱你
+
+~~~C
+void LoveYou(int n)
+{
+    int i = 1;
+    while(i<=n)
+    {
+        i=i*2;
+        printf("I love you %d\n",i);
+    }
+    print("I love you more than %d\n",i);
+}
+~~~
+
+* 计算上述算法的时间复杂度T(n)
+  * 设最深层循环的语句频度（总循环次数）为x
+  * 由循环条件可知，循环结束时正好满足2^x^>n
+  * x=log~2~n+1
+  * T(n)=O(x)=O(log~2~n)
+
+
+
+
+
+
+
