--- a/01 算法时间复杂度/算法时间复杂度.md
+++ b/01 算法时间复杂度/算法时间复杂度.md
@@ -160,7 +160,11 @@ void LoveYou(int n)
 
 
 
+# 2.6 break;
 
+* The break statement is almost always used with `if……else` statement inside the loop.
+* How break statement works?
+  * <img src="https://cvp.oss-cn-shanghai.aliyuncs.com/picgo/202307010422815.png" alt="image-20230701042230684" style="zoom: 67%;" />
 
-
+* The break statement doesn't exist the if statement but the loop statement.
 
