数字搜索型爱你

--- a/01 算法时间复杂度/算法时间复杂度.md
+++ b/01 算法时间复杂度/算法时间复杂度.md
@@ -1,4 +1,4 @@
-# l01 算法时间复杂度 -- 红果沿7-2
+# 01 算法时间复杂度 -- 红果沿7-2
 
 
 
@@ -160,7 +160,7 @@ void LoveYou(int n)
 
 
 
-# 2.6 break;
+## 2.6 break;
 
 * The break statement is almost always used with `if……else` statement inside the loop.
 * How break statement works?
@@ -168,3 +168,49 @@ void LoveYou(int n)
 
 * The break statement doesn't exist the if statement but the loop statement.
 
+
+
+## 2.7 搜索数字型我爱你
+
+~~~C
+void LoveYou(int flag[],int n)
+{
+    for(int i=0;i<n;i++)
+    {
+        if(n==flag[i])
+        {
+            printf("I love you %d\n",n);
+            break; //找到后立即跳出循环
+        }
+    }
+}
+
+int flag[n]={1,……，n};//flag数组中乱序存放了1~n这些数
+LoveYou(flag,n);
+~~~
+
+* 计算算法复杂度T(n)
+
+* 最好情况：元素n在第一个位置 -- 最好时间复杂度T(n)=O(1)
+
+* 最坏情况：元素n在最后一个位置 -- 最好时间复杂度T(n)=O(n)
+
+* 平均情况：假设元素n在任意一个位置的概率相同为1/n -- 平均时间复杂度T（n）= O（n）
+
+* 很多算法执行时间与输入的数据有关
+
+  * $$
+    期望：EX=\sum_{i=1}^{n}a_ip_i
+    $$
+
+  * 循环次数
+
+    * $$
+      x=(1+2+……+n)\cdot\frac{1}{n}=\frac{(1+n)\cdot n}{2}\cdot\frac{1}{n}=\frac{1+n}{2}
+      $$
+
+  * 时间复杂度
+
+    * $$
+      T(n)=O(x)=O(n)
+      $$
