最好最坏平均时间复杂度

--- a/01 算法时间复杂度/算法时间复杂度.md
+++ b/01 算法时间复杂度/算法时间复杂度.md
@@ -214,3 +214,14 @@ LoveYou(flag,n);
     * $$
       T(n)=O(x)=O(n)
       $$
+
+
+
+# 最好 平均 最坏时间复杂度
+
+* 最坏时间复杂度：最坏情况下算法的时间复杂度
+* 平均时间复杂度：所有输入示例等概率出现的情况下，算法的期望运行时间
+* 最好时间复杂度：最好情况下算法的时间复杂度
+
+
+
