算法时间复杂度总结

--- a/01 算法时间复杂度/01 算法时间复杂度.md
+++ b/01 算法时间复杂度/01 算法时间复杂度.md
@@ -229,3 +229,6 @@
   ## 2.9 总结
 
   * ![image-20230701052611513](https://cvp.oss-cn-shanghai.aliyuncs.com/picgo/202307010526734.png)
+
+* 算法的性能问题只有在n很大时才会暴露出来
+
