--- a/01 算法时间复杂度/01 Note/01 算法时间复杂度.md
+++ b/01 算法时间复杂度/01 Note/01 算法时间复杂度.md
@@ -1,52 +1,52 @@
-* # 01 算法时间复杂度 -- 红果沿7-2
+# 01 算法时间复杂度 -- 红果沿7-2
+
+
+
+## 1.定义
+
+* 算法时间复杂度是指算法中基本操作的执行次数
+
+
+
+## 1.2 计算方法
+
+
+
+### 1.2.1 计算时间复杂度方法
+
+* 找出算法的基本操作
+
+* 确定算法基本操作的执行次数
+
+* 找出T(n)的同数量级
+
+  * 算法中的语句执行次数称为语句频度或时间频度，记为T(n)
+  * 同数量级
+    * 1，log~2~n，n，nlog~2~n，n^2^,n^3^,2^n^,n!
+
+* 找出后f(n)=该数量级
+
+* 若T(n)/f(n)求极限可得到一常数c，则时间复杂度T(n)=O(f(n))
+
+* 总结：O( )就是对里面的多项式进行高阶无穷小计算，所以多项式T(n)进行O( )计算后只剩下影响最大的那一项被保留
 
   
 
-  ## 1.定义
 
-  * 算法时间复杂度是指算法中基本操作的执行次数
 
-  
+## 1.3 注意
 
-  ## 1.2 计算方法
+* 在填空题中，要求填写时间复杂度时，一定要写上O，不能只填写一个表达式
 
-  
 
-  ### 1.2.1 计算时间复杂度方法
 
-  * 找出算法的基本操作
+## 1.4 常见的时间复杂度算法比较
 
-  * 确定算法基本操作的执行次数
+* $$
+  O(1)<=O(log_2n)<=O(n)<=O(nlog_2n)<=O(n^2)<=O(n^3)<=\\……<=O(n^k)<=O(2^n)<=O(n!)<=O(n^n)
+  $$
 
-  * 找出T(n)的同数量级
 
-    * 算法中的语句执行次数称为语句频度或时间频度，记为T(n)
-    * 同数量级
-      * 1，log~2~n，n，nlog~2~n，n^2^,n^3^,2^n^,n!
-
-  * 找出后f(n)=该数量级
-
-  * 若T(n)/f(n)求极限可得到一常数c，则时间复杂度T(n)=O(f(n))
-
-  * 总结：O( )就是对里面的多项式进行高阶无穷小计算，所以多项式T(n)进行O( )计算后只剩下影响最大的那一项被保留
-
-    
-
-  
-
-  ## 1.3 注意
-
-  * 在填空题中，要求填写时间复杂度时，一定要写上O，不能只填写一个表达式
-
-  
-
-  ## 1.4 常见的时间复杂度算法比较
-
-  * $$
-    O(1)<=O(log_2n)<=O(n)<=O(nlog_2n)<=O(n^2)<=O(n^3)<=\\……<=O(n^k)<=O(2^n)<=O(n!)<=O(n^n)
-    $$
-
-  
 
 
   # 02 王道课件 -- 算法时间复杂度
@@ -79,7 +79,9 @@
   ## 2.4 加法规则 乘法规则
 
   * 加法规则：多项相加只保留最高阶的项且系数为1
+
   * 乘法规则：多项相乘都保留
+
   * ![image-20230629094055659](https://cvp.oss-cn-shanghai.aliyuncs.com/picgo/202306290940800.png)
 
   * $$
@@ -141,16 +143,16 @@
   ## 2.5.8 指数递增型爱你
 
   ~~~C
-  void LoveYou(int n)
-  {
-      int i = 1;
-      while(i<=n)
-      {
-          i=i*2;
-          printf("I love you %d\n",i);
-      }
-      print("I love you more than %d\n",i);
-  }
+void LoveYou(int n)
+{
+    int i = 1;
+    while(i<=n)
+    {
+        i=i*2;
+        printf("I love you %d\n",i);
+    }
+    print("I love you more than %d\n",i);
+}
   ~~~
 
   * 计算上述算法的时间复杂度T(n)
@@ -174,20 +176,20 @@
   ## 2.7 搜索数字型我爱你
 
   ~~~C
-  void LoveYou(int flag[],int n)
-  {
-      for(int i=0;i<n;i++)
-      {
-          if(n==flag[i])
-          {
-              printf("I love you %d\n",n);
-              break; //找到后立即跳出循环
-          }
-      }
-  }
-  
-  int flag[n]={1,……，n};//flag数组中乱序存放了1~n这些数
-  LoveYou(flag,n);
+void LoveYou(int flag[],int n)
+{
+    for(int i=0;i<n;i++)
+    {
+        if(n==flag[i])
+        {
+            printf("I love you %d\n",n);
+            break; //找到后立即跳出循环
+        }
+    }
+}
+
+int flag[n]={1,……，n};//flag数组中乱序存放了1~n这些数
+LoveYou(flag,n);
   ~~~
 
   * 计算算法复杂度T(n)
