头插法的重要应用——链表的逆置

--- a/01 算法时间复杂度/02 Problem Set/01 王道.md
+++ b/01 算法时间复杂度/02 Problem Set/01 王道.md
@@ -65,3 +65,26 @@ $$
 
 
 
+
+
+# 6 王道 P20 T9
+
+
+
+## 6.1 题目
+
+* <img src="https://cvp.oss-cn-shanghai.aliyuncs.com/picgo/202307040701449.png" alt="image-20230704070131308" style="zoom:67%;" />
+
+
+
+## 6.2 解答
+
+
+
+### 6.2.1 头插法的重要应用 —— 链表的逆置
+
+* ![image-20230704074413585](https://cvp.oss-cn-shanghai.aliyuncs.com/picgo/202307040744717.png)
+
+
+
+### 
