--- a/02 单链表/01 王道/01 Note/01 单链表建立.md
+++ b/02 单链表/01 王道/01 Note/01 单链表建立.md
@@ -39,14 +39,14 @@
 
 * ~~~C++
   LinkList List_HeadInsert(LinkList &L){	//逆向建立单链表
-      LNode *s;->next=s;	
+      LNode *s;
       int x;
       L=(LinkList)malloc(sizeof(LNode)); 	//创建头结点
       L->next=NULL;	//初始为空链表
       scanf("%d",&x);	//输入结点的值
       while(x!=9999)	//输入9999表示结束
       {
-          s=（LNode*)malloc(sizeof(LNode)); //创建新结点
+          s=(LNode*)malloc(sizeof(LNode)); //创建新结点
           s->data=x;
           s->next=L->next;
           L->next=s;	//将新结点插入表中，L为头指针
@@ -57,6 +57,7 @@
   ~~~
 
 * ~~~C++
+  
   //后插操作：在p结点之后插入元素e
   bool InsertNextNode(LNode *p,ElemType e)
   {
@@ -71,5 +72,3 @@
       return true;
   }
   ~~~
-
-  
