--- a/01 算法时间复杂度/02 Problem Set/01 王道.md
+++ b/01 算法时间复杂度/02 Problem Set/01 王道.md
@@ -83,8 +83,115 @@ $$
 
 ### 6.2.1 头插法的重要应用 —— 链表的逆置
 
-* ![image-20230704074413585](https://cvp.oss-cn-shanghai.aliyuncs.com/picgo/202307040744717.png)
+* ![image-20230704074413585](https://cvp.oss-cn-shanghai.aliyuncs.com/picgo/202307041333356.png)
 
 
 
-### 
+### 6.2.2 升序+升序→升序
+
+* $$
+  设m=5,\\1\to2\to3\to4\to5
+  $$
+
+* 
+
+* $$
+  设n=4,\\6\to7\to8\to9
+  $$
+
+
+
+#### 6.2.2.3 有最好最坏情况
+
+* 没有比完的链表可以直接插入
+
+
+
+#### 6.2.2.4 到n链表的第i个结点时（i＜n，没有到最后一个），就已经把m链表全部比较完了，较小的插入
+
+* 1和6比，1插入
+  * 1
+* 2和6比，2插入
+  * 1→2
+* 3和6比，3插入
+  * 1→2→3
+
+* 4和6比，4插入
+  * 1→2→3→4
+
+* 5和6比，5插入
+  * 1→2→3→4→5
+
+
+
+#### 6.2.2.5 由于n链表是升序链表，说明n链表中剩余的结点中数据都比m链表中的大，不用一个个插入，直接整个链表插入，总共只插入了一次，没有插入n次，时间复杂度可以忽略不计
+
+
+
+#### 6.2.2.6 最好情况--i=1
+
+* n的第一个结点`i=1`就把m全部比较完了
+* 最好情况时间复杂度`O(min(m,n))`
+
+
+
+#### 6.2.2.7 最坏情况--i=n
+
+* n的最后一个结点才把m全部比较完
+
+* 比如
+
+  * $$
+    设m=5,\\1\to2\to3\to4\to10
+    $$
+
+  * $$
+    设n=4,\\6\to7\to8\to9
+    $$
+
+* $$
+  1\to2\to3\to4\to6\to7\to8\to9
+  $$
+
+* 
+
+##### 
+
+##### 6.2.2.7.1 最坏情况时间复杂度
+
+* m的最后一个元素和n的最后一个元素比较
+* 时间复杂度为：`m+n`
+* m链表的下标从1移动到m
+* n链表的下标从1移动到n
+* 时间复杂度：`m+n`
+
+
+
+### 6.2.2 升序+升序→降序
+
+* $$
+  设m=5,\\1\to2\to3\to4\to5
+  $$
+
+* $$
+  设n=4,\\6\to7\to8\to9
+  $$
+
+
+
+#### 6.2.2.1 即使到i比完了，n链表也不能直接插入到结果链表中
+
+* 因为n是升序，但是结果链表是降序，还是要一个个插入
+* 升序+升序→升序采用尾插法
+* 升序+升序→降序采用头插法
+
+
+
+
+
+
+
+
+
+
+
