--- a/04 每日一题/01 820/05 23/01 操作系统部分/03 计算题/04 Unix文件系统 UFS 240202/02 相关题集/03 题集 文件共享之软链接硬链接 240203/02 题集/00 总.md
+++ b/04 每日一题/01 820/05 23/01 操作系统部分/03 计算题/04 Unix文件系统 UFS 240202/02 相关题集/03 题集 文件共享之软链接硬链接 240203/02 题集/00 总.md
@@ -1,6 +1,7 @@
 ## 01 文件共享之软链接硬链接题集汇总
 
-- [ ] 01 小题 1
-  - [ ] 24王道4.2选择8
+- [ ] 01 小题 2
+  - [ ] 24王道4.2选择8 09408  240202
+  - [ ] 21820回忆版 填空5 240202
 - [ ] 02 大题小问 1
   - [ ] 24王道4.1综合12（2)
