--- a/01 OS/00 汇总表.md
+++ b/01 OS/00 汇总表.md
@@ -1,4 +1,12 @@
-# 240221
+# 240222
+
+
+
+# 01 专业课
+
+
+
+## 01 DS
 
 - [x] 01 数据结构
 
@@ -8,11 +16,15 @@
 
 * [02 排序算法 时间复杂度 空间复杂度 稳定性 240213 ×](..\..\..\..\Computer\02 DS\02 题集\01 820\01 18\01 填空题\02 排序算法 时间复杂度 空间复杂度 稳定性 240213 ×) 
 
-- [x] 03 磁盘分块 磁盘块
+
+
+## 02 OS
+
+- [ ] 03 磁盘分块 磁盘块
 
 *  [06 基础视频 文件的物理结构 文件的分配方式(上) ×](..\..\..\..\Computer\01 OS\03 大题备考\04 第四章 文件系统大题\06 基础视频 文件的物理结构 文件的分配方式(上) ×) 
 
-- [x] 04 磁盘的磁盘块大小=内存的内存块大小=进程的页面大小的好处
+- [ ] 04 磁盘的磁盘块大小=内存的内存块大小=进程的页面大小的好处
 
 *  [06 基础视频 文件的物理结构 文件的分配方式(上) ×](..\..\..\..\Computer\01 OS\03 大题备考\04 第四章 文件系统大题\06 基础视频 文件的物理结构 文件的分配方式(上) ×) 
 
@@ -25,4 +37,11 @@
 - [ ] 08 为什么进程的逻辑地址空间需要在逻辑上划分为一个个等大的页/页面
   * [06 基础视频 文件的物理结构 文件的分配方式(上) ×](..\..\..\..\Computer\01 OS\03 大题备考\04 第四章 文件系统大题\06 基础视频 文件的物理结构 文件的分配方式(上) ×) 
 - [ ] 09 内存分页/分页存储
+  * [06 基础视频 文件的物理结构 文件的分配方式(上) ×](..\..\..\..\Computer\01 OS\03 大题备考\04 第四章 文件系统大题\06 基础视频 文件的物理结构 文件的分配方式(上) ×) 
+
+- [ ] 10 用户如何操作文件
+  * [06 基础视频 文件的物理结构 文件的分配方式(上) ×](..\..\..\..\Computer\01 OS\03 大题备考\04 第四章 文件系统大题\06 基础视频 文件的物理结构 文件的分配方式(上) ×) 
+- [ ] 11 文件物理结构 文件分配方式
+  * [06 基础视频 文件的物理结构 文件的分配方式(上) ×](..\..\..\..\Computer\01 OS\03 大题备考\04 第四章 文件系统大题\06 基础视频 文件的物理结构 文件的分配方式(上) ×) 
+- [ ] 12 磁盘块 扇区
   * [06 基础视频 文件的物理结构 文件的分配方式(上) ×](..\..\..\..\Computer\01 OS\03 大题备考\04 第四章 文件系统大题\06 基础视频 文件的物理结构 文件的分配方式(上) ×) 
