--- a/01 OS/00 汇总表.md
+++ b/01 OS/00 汇总表.md
@@ -22,26 +22,26 @@
 
 - [ ] 03 磁盘分块 磁盘块
 
-*  [06 基础视频 文件的物理结构 文件的分配方式(上) ×](..\..\..\..\Computer\01 OS\03 大题备考\04 第四章 文件系统大题\06 基础视频 文件的物理结构 文件的分配方式(上) ×) 
+*   [06 基础视频 文件的物理结构 文件的分配方式(上) ×](03 大题备考\04 第四章 文件系统大题\06 基础视频 文件的物理结构 文件的分配方式(上) ×) 
 
 - [ ] 04 磁盘的磁盘块大小=内存的内存块大小=进程的页面大小的好处
 
-*  [06 基础视频 文件的物理结构 文件的分配方式(上) ×](..\..\..\..\Computer\01 OS\03 大题备考\04 第四章 文件系统大题\06 基础视频 文件的物理结构 文件的分配方式(上) ×) 
+*   [06 基础视频 文件的物理结构 文件的分配方式(上) ×](03 大题备考\04 第四章 文件系统大题\06 基础视频 文件的物理结构 文件的分配方式(上) ×) 
 
 - [ ] 05 外存管理 文件逻辑地址空间分块 文件块
-  * [06 基础视频 文件的物理结构 文件的分配方式(上) ×](..\..\..\..\Computer\01 OS\03 大题备考\04 第四章 文件系统大题\06 基础视频 文件的物理结构 文件的分配方式(上) ×) 
+  *  [06 基础视频 文件的物理结构 文件的分配方式(上) ×](03 大题备考\04 第四章 文件系统大题\06 基础视频 文件的物理结构 文件的分配方式(上) ×) 
 - [ ] 06 进程的逻辑地址 文件的逻辑地址
-  * [06 基础视频 文件的物理结构 文件的分配方式(上) ×](..\..\..\..\Computer\01 OS\03 大题备考\04 第四章 文件系统大题\06 基础视频 文件的物理结构 文件的分配方式(上) ×) 
+  *  [06 基础视频 文件的物理结构 文件的分配方式(上) ×](03 大题备考\04 第四章 文件系统大题\06 基础视频 文件的物理结构 文件的分配方式(上) ×) 
 - [ ] 07 磁盘块 VS 文件块
-  * [06 基础视频 文件的物理结构 文件的分配方式(上) ×](..\..\..\..\Computer\01 OS\03 大题备考\04 第四章 文件系统大题\06 基础视频 文件的物理结构 文件的分配方式(上) ×) 
+  *  [06 基础视频 文件的物理结构 文件的分配方式(上) ×](03 大题备考\04 第四章 文件系统大题\06 基础视频 文件的物理结构 文件的分配方式(上) ×) 
 - [ ] 08 为什么进程的逻辑地址空间需要在逻辑上划分为一个个等大的页/页面
-  * [06 基础视频 文件的物理结构 文件的分配方式(上) ×](..\..\..\..\Computer\01 OS\03 大题备考\04 第四章 文件系统大题\06 基础视频 文件的物理结构 文件的分配方式(上) ×) 
+  *  [06 基础视频 文件的物理结构 文件的分配方式(上) ×](03 大题备考\04 第四章 文件系统大题\06 基础视频 文件的物理结构 文件的分配方式(上) ×) 
 - [ ] 09 内存分页/分页存储
-  * [06 基础视频 文件的物理结构 文件的分配方式(上) ×](..\..\..\..\Computer\01 OS\03 大题备考\04 第四章 文件系统大题\06 基础视频 文件的物理结构 文件的分配方式(上) ×) 
+  *  [06 基础视频 文件的物理结构 文件的分配方式(上) ×](03 大题备考\04 第四章 文件系统大题\06 基础视频 文件的物理结构 文件的分配方式(上) ×) 
 
 - [ ] 10 用户如何操作文件
-  * [06 基础视频 文件的物理结构 文件的分配方式(上) ×](..\..\..\..\Computer\01 OS\03 大题备考\04 第四章 文件系统大题\06 基础视频 文件的物理结构 文件的分配方式(上) ×) 
+  *  [06 基础视频 文件的物理结构 文件的分配方式(上) ×](03 大题备考\04 第四章 文件系统大题\06 基础视频 文件的物理结构 文件的分配方式(上) ×) 
 - [ ] 11 文件物理结构 文件分配方式
-  * [06 基础视频 文件的物理结构 文件的分配方式(上) ×](..\..\..\..\Computer\01 OS\03 大题备考\04 第四章 文件系统大题\06 基础视频 文件的物理结构 文件的分配方式(上) ×) 
+  *  [06 基础视频 文件的物理结构 文件的分配方式(上) ×](03 大题备考\04 第四章 文件系统大题\06 基础视频 文件的物理结构 文件的分配方式(上) ×) 
 - [ ] 12 磁盘块 扇区
-  * [06 基础视频 文件的物理结构 文件的分配方式(上) ×](..\..\..\..\Computer\01 OS\03 大题备考\04 第四章 文件系统大题\06 基础视频 文件的物理结构 文件的分配方式(上) ×) 
+  *  [06 基础视频 文件的物理结构 文件的分配方式(上) ×](03 大题备考\04 第四章 文件系统大题\06 基础视频 文件的物理结构 文件的分配方式(上) ×) 
