--- a/00 汇总表.md
+++ b/00 汇总表.md
@@ -13,8 +13,13 @@
 *   [01 填空题01 数据的逻辑结构 240222](02 DS\02 题集\01 820\01 18\01 填空题\01 填空题01 数据的逻辑结构 240222) 
 
 - [x] 02 十种排序算法的稳定性和平均时间复杂度
+  *  [02 填空题02 排序算法 时间复杂度 空间复杂度 稳定性 240222 ×](02 DS\02 题集\01 820\01 18\01 填空题\02 填空题02 排序算法 时间复杂度 空间复杂度 稳定性 240222 ×) 
 
-*  [02 填空题02 排序算法 时间复杂度 空间复杂度 稳定性 240222 ×](02 DS\02 题集\01 820\01 18\01 填空题\02 填空题02 排序算法 时间复杂度 空间复杂度 稳定性 240222 ×) 
+- [ ] 03 选择排序 堆排序 数据基本有序 数据基本无序
+
+  *  [02 填空题02 排序算法 时间复杂度 空间复杂度 稳定性 240222 ×](02 DS\02 题集\01 820\01 18\01 填空题\02 填空题02 排序算法 时间复杂度 空间复杂度 稳定性 240222 ×) 
+
+  
 
 
 
