--- a/00 汇总表.md
+++ b/00 汇总表.md
@@ -12,12 +12,16 @@
 
 *   [01 填空题01 数据的逻辑结构 240222](02 DS\02 题集\01 820\01 18\01 填空题\01 填空题01 数据的逻辑结构 240222) 
 
-- [x] 02 十种排序算法的稳定性和平均时间复杂度
-  *  [02 填空题02 排序算法 时间复杂度 空间复杂度 稳定性 240222 ×](02 DS\02 题集\01 820\01 18\01 填空题\02 填空题02 排序算法 时间复杂度 空间复杂度 稳定性 240222 ×) 
+- [x] 02 小故事记住十种排序算法的平均时间复杂度及稳定性20
+  *   [02 填空题02 排序算法 时间复杂度 空间复杂度 稳定性 240222](02 DS\02 题集\01 820\01 18\01 填空题\02 填空题02 排序算法 时间复杂度 空间复杂度 稳定性 240222) 
 
-- [ ] 03 选择排序 堆排序 数据基本有序 数据基本无序
+- [ ] 03 快速排序 堆排序 基本有序 基本无序
 
-  *  [02 填空题02 排序算法 时间复杂度 空间复杂度 稳定性 240222 ×](02 DS\02 题集\01 820\01 18\01 填空题\02 填空题02 排序算法 时间复杂度 空间复杂度 稳定性 240222 ×) 
+  *   [02 填空题02 排序算法 时间复杂度 空间复杂度 稳定性 240222](02 DS\02 题集\01 820\01 18\01 填空题\02 填空题02 排序算法 时间复杂度 空间复杂度 稳定性 240222) 
+
+- [ ] 04  无范围 数据基本有序 数据有序无序对时间复杂度无影响
+
+  *  [02 填空题02 排序算法 时间复杂度 空间复杂度 稳定性 240222](02 DS\02 题集\01 820\01 18\01 填空题\02 填空题02 排序算法 时间复杂度 空间复杂度 稳定性 240222) 
 
   
 
