--- a/02 DS/02 题集/01 汇总表.md
+++ b/02 DS/02 题集/01 汇总表.md
@@ -1,6 +1,6 @@
-# 00 总 2
+# 00 总 3
 
-* 01 小题：2
+* 01 小题：3
 
 * 02 大题
 
@@ -8,6 +8,7 @@
 
 # 18
 
-## 01 小题 2
+## 01 小题 3
 
-*  [01 填空题](01 820\01 18\01 填空题)  2
+*  [01 填空题](01 820\01 18\01 填空题)  3
+   *  <img src="https://cvp.oss-cn-shanghai.aliyuncs.com/picgo/202402231057950.png" alt="image-20240223105707862" style="zoom:50%;" />
