--- a/00 汇总表.md
+++ b/00 汇总表.md
@@ -10,10 +10,12 @@
 
 * [01 专业名词 中文 英文 240223](02 DS\01 知识卡片\01 专业名词 中文 英文 240223) 
 
-* [01 填空题01 数据的逻辑结构 240222](02 DS\02 题集\01 820\01 18\01 填空题\01 填空题01 数据的逻辑结构 240222) 
-*  [02 填空题02 排序算法 时间复杂度 空间复杂度 稳定性 240222](02 DS\02 题集\01 820\01 18\01 填空题\02 填空题02 排序算法 时间复杂度 空间复杂度 稳定性 240222) 
+*  [01 填空题01 数据的逻辑结构 240223](02 DS\02 题集\01 820\01 18\01 填空题\01 填空题01 数据的逻辑结构 240223) 
+*   [02 填空题02 快速排序 堆排序 数据基本有序 数据基本无序 240223](02 DS\02 题集\01 820\01 18\01 填空题\02 填空题02 快速排序 堆排序 数据基本有序 数据基本无序 240223) 
 
-*  [03 填空题03 Floyd算法 240223](02 DS\02 题集\01 820\01 18\01 填空题\03 填空题03 Floyd算法 240223) 
+*  [03 填空题03 Floyd算法 时间复杂度 240223](02 DS\02 题集\01 820\01 18\01 填空题\03 填空题03 Floyd算法 时间复杂度 240223) 
+
+*   [04 填空题04  快速排序 堆排序 简单选择排序 冒泡排序 空间复杂度 240223 ×](02 DS\02 题集\01 820\01 18\01 填空题\04 填空题04  快速排序 堆排序 简单选择排序 冒泡排序 空间复杂度 240223 ×) 
 
 
 
