--- a/00 汇总表.md
+++ b/00 汇总表.md
@@ -1,36 +1,23 @@
-# 240222
+# 00 ALL 
+
+* 01 小题：
+
+* 02 大题：
+
+  
+
+# 01 OS
+
+* 01 小题：
+* 02 大题：
 
 
 
-# 01 专业课
+# 02 DS 3
 
-
-
-## 01 DS
-
-* [01 专业名词 中文 英文 240223](02 DS\01 知识卡片\01 专业名词 中文 英文 240223) 
-
-*  [01 填空题01 数据的逻辑结构 240223](02 DS\02 题集\01 820\01 18\01 填空题\01 填空题01 数据的逻辑结构 240223) 
-*   [02 填空题02 快速排序 堆排序 数据基本有序 数据基本无序 240223](02 DS\02 题集\01 820\01 18\01 填空题\02 填空题02 快速排序 堆排序 数据基本有序 数据基本无序 240223) 
-
-*  [03 填空题03 Floyd算法 时间复杂度 240223](02 DS\02 题集\01 820\01 18\01 填空题\03 填空题03 Floyd算法 时间复杂度 240223) 
-
-*   [04 填空题04  快速排序 堆排序 简单选择排序 冒泡排序 空间复杂度 240223 ×](02 DS\02 题集\01 820\01 18\01 填空题\04 填空题04  快速排序 堆排序 简单选择排序 冒泡排序 空间复杂度 240223 ×) 
-
-
-
-## 02 OS
-
-*  [06 基础视频 文件的物理结构 文件的分配方式(上) ×](01 OS\03 大题备考\04 第四章 文件系统大题\06 基础视频 文件的物理结构 文件的分配方式(上) ×) 
-  - [x] 01文件分配方式文件物理结构(上)知识总览.png
-  - [ ] 02内存分页 分页存储.png
-  - [ ] 03磁盘块扇区.png
-  - [ ] 04 磁盘分块 磁盘块.png
-  - [ ] 05磁盘的磁盘块大小=内存的内存块大小=进程的页面大小的好处.png
-  - [ ] 06外存管理文件逻辑地址空间分块文件块.png
-  - [ ] 07 磁盘块 VS 文件块.png
-  - [ ] 08为什么进程的逻辑地址空间需要在逻辑上划分为一个个等大的页页面.png
-  - [ ] 09进程的逻辑地址文件的逻辑地址.png
-  - [ ] 10 用户如何操作文件.png
-  - [ ] 11文件分配方式文件物理结构知识总览.png
-  - [ ] 11_1文件物理结构 文件分配方式.png
+* 01 小题：3
+  * 01 18820 3
+    *  [01 填空题01 数据的逻辑结构 240226](02 DS\02 题集\01 820\01 18\01 填空题\01 填空题01 数据的逻辑结构 240226) 
+    *  [02 填空题02 快速排序 堆排序 数据基本有序 数据基本无序 240226](02 DS\02 题集\01 820\01 18\01 填空题\02 填空题02 快速排序 堆排序 数据基本有序 数据基本无序 240226) 
+    *  [03 填空题03 Floyd算法 时间复杂度 240226](02 DS\02 题集\01 820\01 18\01 填空题\03 填空题03 Floyd算法 时间复杂度 240226) 
+* 02 大题：0
