--- a/00_00 汇总表.md
+++ b/00_00 汇总表.md
@@ -1,23 +1,49 @@
 # 00 ALL 
 
-* 01 小题：
+* 01 小题：9
 
 * 02 大题：
 
   
 
-# 01 OS
+# 01 OS 6
 
-* 01 小题：
-* 02 大题：
+
+
+## 01 小题 6
+
+
+
+### 01 23820 6
+
+*  [01 进程调度信息 240226](01 OS\02 题集\01 820\05 23\01 不定向选择\01 进程调度信息 240226) 
+*  [02 具有挂起状态的进程状态图 240226](01 OS\02 题集\01 820\05 23\01 不定向选择\02 具有挂起状态的进程状态图 240226) 
+*  [03 线程 进程 用户级线程 内核级线程 240226](01 OS\02 题集\01 820\05 23\01 不定向选择\03 线程 进程 用户级线程 内核级线程 240226) 
+*  [04 需要考虑并发的系统 240226](01 OS\02 题集\01 820\05 23\01 不定向选择\04 需要考虑并发的系统 240226) 
+*  [05 整形信号量 整形变量 让权等待 240226](01 OS\02 题集\01 820\05 23\01 不定向选择\05 整形信号量 整形变量 让权等待 240226) 
+*  [06 内存分配 伙伴算法 紧凑 首次适应算法 最佳适应算法 下次适应算法 240226](01 OS\02 题集\01 820\05 23\01 不定向选择\06 内存分配 伙伴算法 紧凑 首次适应算法 最佳适应算法 下次适应算法 240226) 
+
+* 
+
+## 02 大题
+
+
+
+### 01 23820 
 
 
 
 # 02 DS 3
 
-* 01 小题：3
-  * 01 18820 3
-    *  [01 填空题01 数据的逻辑结构 240226](02 DS\02 题集\01 820\01 18\01 填空题\01 填空题01 数据的逻辑结构 240226) 
-    *  [02 填空题02 快速排序 堆排序 数据基本有序 数据基本无序 240226](02 DS\02 题集\01 820\01 18\01 填空题\02 填空题02 快速排序 堆排序 数据基本有序 数据基本无序 240226) 
-    *  [03 填空题03 Floyd算法 时间复杂度 240226](02 DS\02 题集\01 820\01 18\01 填空题\03 填空题03 Floyd算法 时间复杂度 240226) 
-* 02 大题：0
+
+
+## 01 小题 3
+
+
+
+### 01 18820 3
+
+*  [01 填空题01 数据的逻辑结构 240226](02 DS\02 题集\01 820\01 18\01 填空题\01 填空题01 数据的逻辑结构 240226) 
+*  [02 填空题02 快速排序 堆排序 数据基本有序 数据基本无序 240226](02 DS\02 题集\01 820\01 18\01 填空题\02 填空题02 快速排序 堆排序 数据基本有序 数据基本无序 240226) 
+*  [03 填空题03 Floyd算法 时间复杂度 240226](02 DS\02 题集\01 820\01 18\01 填空题\03 填空题03 Floyd算法 时间复杂度 240226) 
+
