--- a/00_01 ×/01 240226/00 ×汇总表.md
+++ b/00_01 ×/01 240226/00 ×汇总表.md
@@ -1,4 +1,4 @@
-# 240226 2
+# 240226 3
 
 
 
@@ -8,6 +8,7 @@
 
 
 
-## 02 OS 1
+## 02 OS 2
 
-*  [01 进程调度信息 240226 ×](02 OS\01 进程调度信息 240226 ×) 
+*  [01 进程调度信息 240226 ×](02 OS\01 进程调度信息 240226 ×)  
+*  [02 内存分配 伙伴算法 紧凑 首次适应算法 最佳适应算法 下次适应算法 240226 ×](02 OS\02 内存分配 伙伴算法 紧凑 首次适应算法 最佳适应算法 下次适应算法 240226 ×) 
