--- a/00_00 汇总表.md
+++ b/00_00 汇总表.md
@@ -1,16 +1,16 @@
-# 00 ALL 
+# 00 ALL 15+
 
-* 01 小题：13
+* 01 OS：12 + 
 
-* 02 大题：
+* 02 DS：3 + 0
 
   
 
-# 01 OS 10
+# 01 OS 12 +
 
 
 
-## 01 小题 10
+## 01 小题 12
 
 
 
@@ -37,13 +37,21 @@
 
 
 * 填空题 4
-
   *  [01 磁盘 平均延迟 240226](01 OS\02 题集\01 820\05 23\02 填空题\01 磁盘 平均延迟 240226) 
   *  [02 多级索引顺序文件 计算平均查找次数 240226](01 OS\02 题集\01 820\05 23\02 填空题\02 多级索引顺序文件 计算平均查找次数 240226) 
   *  [03 顺序文件 链式存储 240226](01 OS\02 题集\01 820\05 23\02 填空题\03 顺序文件 链式存储 240226) 
   *  [04 IO设备 IO过程 CPU参与度 240226](01 OS\02 题集\01 820\05 23\02 填空题\04 IO设备 IO过程 CPU参与度 240226) 
   
-  
+
+### 02 专题1 文件共享之软链接硬链接 2
+
+* 选择题 1
+  *  [01 24王道4.2 选择8 09408 240226](01 OS\02 题集\02 专题\01 文件共享之软链接硬链接 240226\02 题集\01 24王道4.2 选择8 09408 240226) 
+
+*  填空题 1
+  * [02 21820 填空题05 240226](01 OS\02 题集\02 专题\01 文件共享之软链接硬链接 240226\02 题集\02 21820 填空题05 240226) 
+
+
 
 ## 02 大题
 
@@ -63,7 +71,12 @@
 
 ### 01 18820 3
 
-*  [01 填空题01 数据的逻辑结构 240226](02 DS\02 题集\01 820\01 18\01 填空题\01 填空题01 数据的逻辑结构 240226) 
-*  [02 填空题02 快速排序 堆排序 数据基本有序 数据基本无序 240226](02 DS\02 题集\01 820\01 18\01 填空题\02 填空题02 快速排序 堆排序 数据基本有序 数据基本无序 240226) 
-*  [03 填空题03 Floyd算法 时间复杂度 240226](02 DS\02 题集\01 820\01 18\01 填空题\03 填空题03 Floyd算法 时间复杂度 240226) 
+* 填空题 3
+
+  *  [01 填空题01 数据的逻辑结构 240226](02 DS\02 题集\01 820\01 18\01 填空题\01 填空题01 数据的逻辑结构 240226) 
+
+  *  [02 填空题02 快速排序 堆排序 数据基本有序 数据基本无序 240226](02 DS\02 题集\01 820\01 18\01 填空题\02 填空题02 快速排序 堆排序 数据基本有序 数据基本无序 240226) 
+
+  *  [03 填空题03 Floyd算法 时间复杂度 240226](02 DS\02 题集\01 820\01 18\01 填空题\03 填空题03 Floyd算法 时间复杂度 240226) 
+
 
