--- a/00_00 汇总表.md
+++ b/00_00 汇总表.md
@@ -1,12 +1,12 @@
-# 00 ALL 15+
+# 00 ALL 15 + 3 + 1 = 19
 
-* 01 OS：12 + 
+* 01 OS：12 + 3 + 1
 
 * 02 DS：3 + 0
 
   
 
-# 01 OS 12 +
+# 01 OS 12 + 3 + 1 = 16
 
 
 
@@ -53,11 +53,27 @@
 
 
 
-## 02 大题
+## 02 大题 3
 
 
 
-### 01 23820 
+### 01 23820 3
+
+* 计算题 3
+
+  *  [01 高响应比优先 短作业优先 平均周转时间 240226](01 OS\02 题集\01 820\05 23\03 计算题\01 高响应比优先 短作业优先 平均周转时间 240226) 
+  *  [02 PV题 前驱后继题 基本同步问题 240226](01 OS\02 题集\01 820\05 23\03 计算题\02 PV题 前驱后继题 基本同步问题 240226) 
+  *  [03 虚拟内存管理 240226](01 OS\02 题集\01 820\05 23\03 计算题\03 虚拟内存管理 240226) 
+
+  
+
+## 03  大题小问 1
+
+
+
+### 01 专题2 文件最大长度 1
+
+*  [01 24王道4.1综合11(1) 18年408 混合索引 最大文件长度 240226](01 OS\02 题集\02 专题\02 文件最大长度 240226\01 24王道4.1综合11(1) 18年408 混合索引 最大文件长度 240226) 
 
 
 
@@ -78,5 +94,4 @@
   *  [02 填空题02 快速排序 堆排序 数据基本有序 数据基本无序 240226](02 DS\02 题集\01 820\01 18\01 填空题\02 填空题02 快速排序 堆排序 数据基本有序 数据基本无序 240226) 
 
   *  [03 填空题03 Floyd算法 时间复杂度 240226](02 DS\02 题集\01 820\01 18\01 填空题\03 填空题03 Floyd算法 时间复杂度 240226) 
-
 
