--- a/00_00 汇总表.md
+++ b/00_00 汇总表.md
@@ -18,30 +18,30 @@
 
 * 不定项选择 6
 
-  * [01 进程调度信息 240226](01 OS\02 题集\01 820\05 23\01 不定向选择\01 进程调度信息 240226) 
+  *  [01 进程调度信息 240226 ×](01 OS\02 题集\01 820\05 23\01 不定向选择\01 进程调度信息 240226 ×) 
 
 
-  * [02 具有挂起状态的进程状态图 240226](01 OS\02 题集\01 820\05 23\01 不定向选择\02 具有挂起状态的进程状态图 240226) 
+    * [02 具有挂起状态的进程状态图 240226](01 OS\02 题集\01 820\05 23\01 不定向选择\02 具有挂起状态的进程状态图 240226) 
 
 
-  * [03 线程 进程 用户级线程 内核级线程 240226](01 OS\02 题集\01 820\05 23\01 不定向选择\03 线程 进程 用户级线程 内核级线程 240226) 
+    * [03 线程 进程 用户级线程 内核级线程 240226](01 OS\02 题集\01 820\05 23\01 不定向选择\03 线程 进程 用户级线程 内核级线程 240226) 
 
 
-  * [04 需要考虑并发的系统 240226](01 OS\02 题集\01 820\05 23\01 不定向选择\04 需要考虑并发的系统 240226) 
+    * [04 需要考虑并发的系统 240226](01 OS\02 题集\01 820\05 23\01 不定向选择\04 需要考虑并发的系统 240226) 
 
 
-  * [05 整形信号量 整形变量 让权等待 240226](01 OS\02 题集\01 820\05 23\01 不定向选择\05 整形信号量 整形变量 让权等待 240226) 
+    * [05 整形信号量 整形变量 让权等待 240226](01 OS\02 题集\01 820\05 23\01 不定向选择\05 整形信号量 整形变量 让权等待 240226) 
 
-
-  * [06 内存分配 伙伴算法 紧凑 首次适应算法 最佳适应算法 下次适应算法 240226](01 OS\02 题集\01 820\05 23\01 不定向选择\06 内存分配 伙伴算法 紧凑 首次适应算法 最佳适应算法 下次适应算法 240226) 
-
+  *  [06 内存分配 伙伴算法 紧凑 首次适应算法 最佳适应算法 下次适应算法 240226 ×](01 OS\02 题集\01 820\05 23\01 不定向选择\06 内存分配 伙伴算法 紧凑 首次适应算法 最佳适应算法 下次适应算法 240226 ×) 
 
 * 填空题 4
-  *  [01 磁盘 平均延迟 240226](01 OS\02 题集\01 820\05 23\02 填空题\01 磁盘 平均延迟 240226) 
-  *  [02 多级索引顺序文件 计算平均查找次数 240226](01 OS\02 题集\01 820\05 23\02 填空题\02 多级索引顺序文件 计算平均查找次数 240226) 
-  *  [03 顺序文件 链式存储 240226](01 OS\02 题集\01 820\05 23\02 填空题\03 顺序文件 链式存储 240226) 
-  *  [04 IO设备 IO过程 CPU参与度 240226](01 OS\02 题集\01 820\05 23\02 填空题\04 IO设备 IO过程 CPU参与度 240226) 
-  
+
+
+  * [01 磁盘 平均延迟 240226](01 OS\02 题集\01 820\05 23\02 填空题\01 磁盘 平均延迟 240226) 
+  * [02 多级索引顺序文件 计算平均查找次数 240226](01 OS\02 题集\01 820\05 23\02 填空题\02 多级索引顺序文件 计算平均查找次数 240226) 
+  * [03 顺序文件 链式存储 240226](01 OS\02 题集\01 820\05 23\02 填空题\03 顺序文件 链式存储 240226) 
+  * [04 IO设备 IO过程 CPU参与度 240226](01 OS\02 题集\01 820\05 23\02 填空题\04 IO设备 IO过程 CPU参与度 240226) 
+
 
 ### 02 专题1 文件共享之软链接硬链接 2
 
@@ -63,7 +63,7 @@
 
   *  [01 高响应比优先 短作业优先 平均周转时间 240226](01 OS\02 题集\01 820\05 23\03 计算题\01 高响应比优先 短作业优先 平均周转时间 240226) 
   *  [02 PV题 前驱后继题 基本同步问题 240226](01 OS\02 题集\01 820\05 23\03 计算题\02 PV题 前驱后继题 基本同步问题 240226) 
-  *  [03 虚拟内存管理 240226](01 OS\02 题集\01 820\05 23\03 计算题\03 虚拟内存管理 240226) 
+  *   [03 虚拟内存管理 240226 ×](01 OS\02 题集\01 820\05 23\03 计算题\03 虚拟内存管理 240226 ×) 
 
   
 
@@ -91,7 +91,7 @@
 
   *  [01 填空题01 数据的逻辑结构 240226](02 DS\02 题集\01 820\01 18\01 填空题\01 填空题01 数据的逻辑结构 240226) 
 
-  *  [02 填空题02 快速排序 堆排序 数据基本有序 数据基本无序 240226](02 DS\02 题集\01 820\01 18\01 填空题\02 填空题02 快速排序 堆排序 数据基本有序 数据基本无序 240226) 
+  *   [02 填空题02 快速排序 堆排序 数据基本有序 数据基本无序 240226 ×](02 DS\02 题集\01 820\01 18\01 填空题\02 填空题02 快速排序 堆排序 数据基本有序 数据基本无序 240226 ×) 
 
   *  [03 填空题03 Floyd算法 时间复杂度 240226](02 DS\02 题集\01 820\01 18\01 填空题\03 填空题03 Floyd算法 时间复杂度 240226) 
 
