--- a/00_01 ×/01 × 240226.md
+++ b/00_01 ×/01 × 240226.md
@@ -1,4 +1,4 @@
-# 240226 3
+# 240226 4
 
 
 
@@ -6,7 +6,8 @@
 
 *   [02 填空题02 快速排序 堆排序 数据基本有序 数据基本无序 240226 ×](..\02 DS\02 题集\01 820\01 18\01 填空题\02 填空题02 快速排序 堆排序 数据基本有序 数据基本无序 240226 ×) 
 
-## 02 OS 2
+## 02 OS 3
 
 *    [01 进程调度信息 240226 ×](..\01 OS\02 题集\01 820\05 23\01 不定向选择\01 进程调度信息 240226 ×) 
 *    [06 内存分配 伙伴算法 紧凑 首次适应算法 最佳适应算法 下次适应算法 240226 ×](..\01 OS\02 题集\01 820\05 23\01 不定向选择\06 内存分配 伙伴算法 紧凑 首次适应算法 最佳适应算法 下次适应算法 240226 ×) 
+*     [03 虚拟内存管理 240226 ×](..\01 OS\02 题集\01 820\05 23\03 计算题\03 虚拟内存管理 240226 ×) 
