--- a/00_00 汇总表.md
+++ b/00_00 汇总表.md
@@ -47,5 +47,6 @@
 
 * 01 18820 4
   *   [01 填空题 4](02 DS\01 题集\01 820\01 18\01 小题\01 填空题 4) 
-
+  *   02 专题01 十种排序算法 平均时间复杂度 最坏时间复杂度 最好时间复杂度 空间复杂度 稳定性 (50=5x10)
+      *    [01 十种排序算法 平均时间复杂度 最坏时间复杂度 最好时间复杂度 空间复杂度 稳定性 (50=5x10) 240227](02 DS\01 题集\02 专题\01 十种排序算法 平均时间复杂度 最坏时间复杂度 最好时间复杂度 空间复杂度 稳定性 (50=5x10) 240227) 
 
