--- a/00_00 汇总表.md
+++ b/00_00 汇总表.md
@@ -1,8 +1,8 @@
-# 00 ALL 16 + 4  =  20
+# 00 ALL 16 + 4  =  22
 
 * 01 OS 12 + 3 + 1 = 16
 
-* 02 DS 4 + 0 = 4
+* 02 DS 6 + 0 = 6
 
   
 
@@ -39,14 +39,14 @@
 
 
 
-# 02 DS 4
+# 02 DS 6
 
 
 
-## 01 小题 4
+## 01 小题 6
 
-* 01 18820 4
-  *   [01 填空题 4](02 DS\01 题集\01 820\01 18\01 小题\01 填空题 4) 
+* 01 18820 6
+  *    [01 填空题 6](02 DS\01 题集\01 820\01 18 8+5=13\01 小题 8\01 填空题 6) 
   *   02 专题01 十种排序算法 平均时间复杂度 最坏时间复杂度 最好时间复杂度 空间复杂度 稳定性 (50=5x10)
       *    [01 十种排序算法 平均时间复杂度 最坏时间复杂度 最好时间复杂度 空间复杂度 稳定性 (50=5x10) 240227](02 DS\01 题集\02 专题\01 十种排序算法 平均时间复杂度 最坏时间复杂度 最好时间复杂度 空间复杂度 稳定性 (50=5x10) 240227) 
 
