--- a/02 DS/01 题集/02 专题/03 快速排序 240301/01 知识点/01 快速排序/01 快速排序.md
+++ b/02 DS/01 题集/02 专题/03 快速排序 240301/01 知识点/01 快速排序/01 快速排序.md
@@ -1,6 +1,6 @@
 # 01 快速排序
 
-<img src="https://cvp.oss-cn-shanghai.aliyuncs.com/picgo/202403011855231.png" alt="image-20240301185556973" style="zoom:50%;" />
+<img src="https://cvp.oss-cn-shanghai.aliyuncs.com/picgo/202403012038626.png" alt="![](https://cvp.oss-cn-shanghai.aliyuncs.com/picgo/202403012038626.png)" style="zoom:50%;" />
 
 
 
