--- a/00_00 汇总表.md
+++ b/00_00 汇总表.md
@@ -1,8 +1,8 @@
-# 00 ALL 16 + 4  =  22
+# 00 ALL 16 + 8  =  22
 
 * 01 OS 12 + 3 + 1 = 16
 
-* 02 DS 6 + 0 = 6
+* 02 DS 8 + 0 = 8
 
   
 
@@ -39,12 +39,13 @@
 
 
 
-# 02 DS 6
+# 02 DS 8
 
 
 
-## 01 小题 6
+## 01 小题 8
 
 * 01 18820 6
   *    [01 填空题 6](02 DS\01 题集\01 820\01 18 8+5=13\01 小题 8\01 填空题 6) 
+  *     [02 选择题 2](02 DS\01 题集\01 820\01 18 8+5=13\01 小题 8\02 选择题 2) 
 
