--- a/00_00 汇总表.md
+++ b/00_00 汇总表.md
@@ -1,8 +1,8 @@
-# 00 ALL 16 + 8  =  24
+# 00 ALL 16 + 12  =  28
 
 * 01 OS 12 + 3 + 1 = 16
 
-* 02 DS 8 + 0 = 8
+* 02 DS 12 + 0 = 12
 
   
 
@@ -39,13 +39,15 @@
 
 
 
-# 02 DS 8
+# 02 DS 12
 
 
 
-## 01 小题 8
+## 01 小题 12
 
-* 01 18820 6
+* 01 18820 8
   *    [01 填空题 6](02 DS\01 题集\01 820\01 18 8+5=13\01 小题 8\01 填空题 6) 
   *     [02 选择题 2](02 DS\01 题集\01 820\01 18 8+5=13\01 小题 8\02 选择题 2) 
 
+* 02 B站 广义表 4
+  *  [01 B站 4](02 DS\01 题集\02 专题\04 820√ 408× 240313\01 广义表\02 题集\01 B站 4) 
