--- a/00_00 汇总表.md
+++ b/00_00 汇总表.md
@@ -50,4 +50,4 @@
   *     [02 选择题 2](02 DS\01 题集\01 820\01 18 8+5=13\01 小题 8\02 选择题 2) 
 
 * 02 B站 广义表 4
-  *  [01 B站 4](02 DS\01 题集\02 专题\04 820√ 408× 240313\01 广义表\02 题集\01 B站 4) 
+  *   [01 B站 4](02 DS\01 题集\02 专题\04 820√ 408× 【广义表】 240313\01 广义表\02 题集\01 B站 4) 
