--- a/00 ×/01 × 240313.md
+++ b/00 ×/01 × 240313.md
@@ -1,24 +1,25 @@
-# 24013 2
+# 24013 
 
 
 
-## 01 DS 2
+## 01 DS 4
 
-*     [01 填空题01 数据的逻辑结构 240313](..\02 DS\01 题集\01 820\01 18 8+5=13\01 小题 8\01 填空题 6\01 填空题01 数据的逻辑结构 240313) 
+*     01 [01 填空题01 数据的逻辑结构 240313](..\02 DS\01 题集\01 820\01 18 8+5=13\01 小题 8\01 填空题 6\01 填空题01 数据的逻辑结构 240313) 
       * 物理(存储)结构：散列结构
 
-*     [04 填空题04  快速排序 堆排序 简单选择排序 冒泡排序 空间复杂度 240313](..\02 DS\01 题集\01 820\01 18 8+5=13\01 小题 8\01 填空题 6\04 填空题04  快速排序 堆排序 简单选择排序 冒泡排序 空间复杂度 240313) 
+*     02 [04 填空题04  快速排序 堆排序 简单选择排序 冒泡排序 空间复杂度 240313](..\02 DS\01 题集\01 820\01 18 8+5=13\01 小题 8\01 填空题 6\04 填空题04  快速排序 堆排序 简单选择排序 冒泡排序 空间复杂度 240313) 
       *     空间复杂度O(1)选冒插希堆 5
       *     归并空间复杂度O(n)
 
-*      [03 填空题03 Floyd算法 时间复杂度 240313](..\02 DS\01 题集\01 820\01 18 8+5=13\01 小题 8\01 填空题 6\03 填空题03 Floyd算法 时间复杂度 240313) 
+*      03 [03 填空题03 Floyd算法 时间复杂度 240313](..\02 DS\01 题集\01 820\01 18 8+5=13\01 小题 8\01 填空题 6\03 填空题03 Floyd算法 时间复杂度 240313) 
 
       *     最短路径弗洛伊德Floyd算法经常出现的一个填空
             $$
             A^{(k)}[i][j]表示从顶点V_i到V_j中间顶点的序号不大于k的最短路径的长度
             $$
             
+      
+*     
 
-
-
-
+* 04  [02 图的存储 240313](..\02 DS\01 题集\02 专题\02 图 240313\01 知识点 3\02 图的存储 240313) 
+  * 顶点数=图的阶=|V|
