--- a/01 初试/00_00 汇总表.md
+++ b/01 初试/00_00 汇总表.md
@@ -1,8 +1,8 @@
-# 00 ALL 16 + 19  =  35
+# 00 ALL 16 + 16  =  32
 
 * 01 OS 12 + 3 + 1 = 16
 
-* 02 DS 12 + 0 = 19
+* 02 DS 16 + 0 = 16
 
   
 
@@ -39,11 +39,11 @@
 
 
 
-# 02 DS 19
+# 02 DS 16
 
 
 
-## 01 小题 19
+## 01 小题 16
 
 * 01 18820 8
   *    [01 填空题 6](02 DS\01 题集\01 820\01 18 8+5=13\01 小题 8\01 填空题 6) 
@@ -52,5 +52,5 @@
 
 * 02 B站 广义表 4
   *   [01 B站 4](02 DS\01 题集\02 专题\04 820√ 408× 【广义表】 240313\01 广义表\02 题集\01 B站 4) 
-* 03 平衡二叉树调整 7
-  *  [02 其他 7](02 DS\01 题集\02 专题\05 平衡二叉树 AVL\01 平衡二叉树 调整\02 题集\02 其他 7) 
+* 03 平衡二叉树调整 4
+  *   [02 其他 4](02 DS\01 题集\02 专题\05 平衡二叉树 AVL\01 平衡二叉树 调整\02 题集 5\02 其他 4) 
