--- a/01 初试/00_00 汇总表.md
+++ b/01 初试/00_00 汇总表.md
@@ -1,12 +1,12 @@
-# 00 ALL 16 + 16  =  32
+# 00 ALL 33 = 16 + 17
 
-* 01 OS 12 + 3 + 1 = 16
+* 01 OS 16 = 12 + 3 + 1 
 
-* 02 DS 16 + 0 = 16
+* 02 DS 17 = 16 + 1
 
   
 
-# 01 OS 12 + 3 + 1 = 16
+# 01 OS 16 = 12 + 3 + 1 
 
 
 
@@ -39,18 +39,22 @@
 
 
 
-# 02 DS 16
+# 02 DS 17 = 16 + 1
 
 
 
 ## 01 小题 16
 
 * 01 18820 8
-  *    [01 填空题 6](02 DS\01 题集\01 820\01 18 8+5=13\01 小题 8\01 填空题 6) 
-  *     [02 选择题 2](02 DS\01 题集\01 820\01 18 8+5=13\01 小题 8\02 选择题 2) 
-  *     
-
+  *     [01 小题 8](02 DS\01 题集\01 820\01 18 8+5=13\01 小题 8) 
 * 02 B站 广义表 4
   *   [01 B站 4](02 DS\01 题集\02 专题\04 820√ 408× 【广义表】 240313\01 广义表\02 题集\01 B站 4) 
 * 03 平衡二叉树调整 4
   *   [02 其他 4](02 DS\01 题集\02 专题\05 平衡二叉树 AVL\01 平衡二叉树 调整\02 题集 5\02 其他 4) 
+
+
+
+## 02 大题 1
+
+* 01 18820 1
+  *  [02 简答题03 平衡二叉树 插入 不平衡调整 240321](02 DS\01 题集\01 820\01 18 8+5=13\02 大题 5\01 简答题 5\02 简答题03 平衡二叉树 插入 不平衡调整 240321) 
