--- a/01 初试/00_00 汇总表.md
+++ b/01 初试/00_00 汇总表.md
@@ -1,8 +1,8 @@
-# 00 ALL 34 = 16 + 18
+# 00 ALL 35 = 16 + 19
 
 * 01 OS 16 = 12 + 3 + 1 
 
-* 02 DS 18 = 16 + 2
+* 02 DS 19 = 16 + 3
 
   
 
@@ -39,7 +39,7 @@
 
 
 
-# 02 DS 18 = 16 + 2
+# 02 DS 19 = 16 + 3
 
 
 
@@ -54,8 +54,9 @@
 
 
 
-## 02 大题 2
+## 02 大题 3
 
-* 01 18820 2
+* 01 18820 3
   *  [02 简答题03 平衡二叉树 插入 不平衡调整 240321](02 DS\01 题集\01 820\01 18 8+5=13\02 大题 5\01 简答题 5\02 简答题03 平衡二叉树 插入 不平衡调整 240321) 
   *    [03 简答题04 hash函数 链地址法 查找成功ASL 240228](02 DS\01 题集\01 820\01 18 8+5=13\02 大题 5\01 简答题 5\03 简答题04 hash函数 链地址法 查找成功ASL 240228) 
+  *     [04 简答题05 最优二叉树构造 240228](02 DS\01 题集\01 820\01 18 8+5=13\02 大题 5\01 简答题 5\04 简答题05 最优二叉树构造 240228) 
