--- a/01 初试/00_00 汇总表.md
+++ b/01 初试/00_00 汇总表.md
@@ -1,8 +1,8 @@
-# 00 ALL 35 = 16 + 19
+# 00 ALL 36 = 16 + 20
 
 * 01 OS 16 = 12 + 3 + 1 
 
-* 02 DS 19 = 16 + 3
+* 02 DS 20 = 17 + 3
 
   
 
@@ -39,11 +39,11 @@
 
 
 
-# 02 DS 19 = 16 + 3
+# 02 DS 20 = 17 + 3
 
 
 
-## 01 小题 16
+## 01 小题 17
 
 * 01 18820 8
   *     [01 小题 8](02 DS\01 题集\01 820\01 18 8+5=13\01 小题 8) 
@@ -51,7 +51,8 @@
   *    [01 B站 4](02 DS\01 题集\02 专题\04 820√ 408× 【广义表】 240413\01 广义表\02 题集\01 B站 4) 
 * 03 平衡二叉树调整 4
   *   [02 其他 4](02 DS\01 题集\02 专题\05 平衡二叉树 AVL\01 平衡二叉树 调整\02 题集 5\02 其他 4) 
-
+* 04 21820 1
+  *  [01 填空题01 上三角矩阵 压缩存储方法 240420](02 DS\01 题集\01 820\05 21\01 填空题\01 填空题01 上三角矩阵 压缩存储方法 240420) 
 
 
 ## 02 大题 3
