--- a/01 初试/00_00 汇总表.md
+++ b/01 初试/00_00 汇总表.md
@@ -1,16 +1,16 @@
-# 00 ALL 36 = 16 + 20
+# 00 ALL 37 = 17 + 20
 
-* 01 OS 16 = 12 + 3 + 1 
+* 01 OS 17 = 13 + 3 + 1 
 
 * 02 DS 20 = 17 + 3
 
   
 
-# 01 OS 16 = 12 + 3 + 1 
+# 01 OS 17 = 13 + 3 + 1 
 
 
 
-## 01 小题 12
+## 01 小题 13 =  10 + 2 + 1
 
 * 01 23820 10
 
@@ -19,6 +19,10 @@
 
   *  [01 小题 1](01 OS\01 题集\02 专题\01 文件共享之软链接硬链接 240226\02 题集\01 820\01 小题 1) 
   *  [01 小题 1](01 OS\01 题集\02 专题\01 文件共享之软链接硬链接 240226\02 题集\02 480\01 小题 1) 
+
+* 03 21820 1
+
+  *  [01 填空题 1](01 OS\01 题集\01 820\04 21\01 填空题 1) 
 
   
 
