--- a/01 初试/05 汇总表.md
+++ b/01 初试/05 汇总表.md
@@ -1,16 +1,16 @@
-# 00 ALL 49 = 29 + 20
+# 00 ALL 56 = 36 + 20
 
-* 01 OS 29 = 25 + 3 + 1 
+* 01 OS 36 = 32 + 3 + 1 
 
 * 02 DS 20 = 17 + 3
 
   
 
-# 01 OS 29 = 25 + 3 + 1 
+# 01 OS 36 = 32 + 3 + 1 
 
 
 
-## 01 小题 25 =  10 + 2 + 1 + 12
+## 01 小题 32 =  10 + 2 + 8 + 12
 
 * 01 23820 10
 
@@ -20,9 +20,9 @@
   *  [01 小题 1](01 OS\01 题集\02 专题\01 文件共享之软链接硬链接 240226\02 题集\01 820\01 小题 1) 
   *  [01 小题 1](01 OS\01 题集\02 专题\01 文件共享之软链接硬链接 240226\02 题集\02 480\01 小题 1) 
 
-* 03 21820 1
+* 03 21820 8
 
-  *  [01 填空题 1](01 OS\01 题集\01 820\04 21\01 填空题 1) 
+  *   [01 填空题 8](01 OS\01 题集\01 820\04 21 8\01 填空题 8) 
 
 * 04 22820 12
   *   [01 小题 12](01 OS\01 题集\01 820\05 22 12\01 小题 12) 
