--- a/01 初试/01 408真题/01 24408/02 试卷分析.md
+++ b/01 初试/01 408真题/01 24408/02 试卷分析.md
@@ -2,7 +2,7 @@
 
 - [x] 01 T1 2‘ 
 
-  * 考察：单链表 插入模拟
+  * 考察：单链表 插入 模拟
   * 完全正确✔
   * 无需要复习知识点
 
@@ -12,6 +12,8 @@
     - [x] 01 方法1：中缀转后缀模拟
     - [x] 02 方法2：求出表达式树
 
-- [ ] 03 T3 2‘
+- [x] 03 T3 2‘
 
+  - [x] 知识点：中序遍历序列 手拍法
+  
   
