--- a/01 初试/01 408真题/01 24408/02 试卷分析.md
+++ b/01 初试/01 408真题/01 24408/02 试卷分析.md
@@ -2,30 +2,8 @@
 
 - [x] 01 T1 2‘ 
 
-  * 考察：单链表 插入 模拟
-  * 完全正确✔
-  * 无需要复习知识点
+  - [ ] 01 知识点：一段语句序列对链表的影响 基本方法
+  - [ ] 02 刷题
+  - [ ] 03 总结 易错点
 
-- [x] 02 T2 2’  
-
-  - [x] 知识点：中缀转后缀表达式 2种方法
-    - [x] 01 方法1：中缀转后缀模拟
-    - [x] 02 方法2：求出表达式树
-
-- [x] 03 T3 2‘
-
-  - [x] 知识点：中序遍历序列 手拍法
-
-- [x] 04 T4 2‘
-
-  - [x] 知识点：求邻接多重表 顶点的度 3种方法
-    - [x] 01 直接求 邻接多重表 顶点的度
-    - [x] 02 通过 将邻接多重表 转换成 无向图 求无向图 顶点的度 求邻接多重表 顶点的度
-    - [x] 03 通过 将邻接多重表 转换成 邻接表 求邻接表 顶点的度 求邻接多重表 顶点的度
-
-- [ ] 05 T5 2'
-
-  - [ ] 01 知识点：折半查找
-  
-  
   
