--- a/01 初试/01 408真题/01 24408/02 试卷分析.md
+++ b/01 初试/01 408真题/01 24408/02 试卷分析.md
@@ -2,8 +2,8 @@
 
 - [x] 01 T1 2‘ 
 
-  - [ ] 01 知识点：一段语句序列对链表的影响 基本方法
-  - [ ] 02 刷题
-  - [ ] 03 总结 易错点
+  - [x] 01 知识点：一段语句序列对链表的影响 基本方法
+  - [x] 02 刷题
+  - [x] 03 总结 易错点
 
-  
+- [ ] 
