--- a/01 初试/01 408真题/01 24408/02 试卷分析.md
+++ b/01 初试/01 408真题/01 24408/02 试卷分析.md
@@ -6,10 +6,10 @@
   - [x] 02 刷题
   - [x] 03 总结 易错点
 
-- [ ] 02 T2 2’
-  - [ ] 01 知识点：中缀转后缀表达式 2种方法
-    - [ ] 01 知识点：中缀转后缀表达式 方法1 中缀转后缀模拟
-    - [ ] 02 知识点：中缀转后缀表达式 方法2 求出表达式树
-  - [ ] 02 刷题
+- [x] 02 T2 2’
+  - [x] 01 知识点：中缀转后缀表达式 2种方法
+    - [x] 01 知识点：中缀转后缀表达式 方法1 中缀转后缀模拟
+    - [x] 02 知识点：中缀转后缀表达式 方法2 求出表达式树
+  - [x] 02 刷题
 
 - [ ] 
