--- a/01 初试/01 408真题/01 24408/02 试卷分析.md
+++ b/01 初试/01 408真题/01 24408/02 试卷分析.md
@@ -12,16 +12,17 @@
     - [x] 02 知识点：中缀转后缀表达式 方法2 求出表达式树
   - [x] 02 刷题
 
-- [ ] 03 T3 2'
+- [x] 03 T3 2'
   
   - [x] 考察：二叉树 中序遍历序列
-  - [ ] 01 知识点
-    - [ ] 01 得到 二叉树 中序遍历序列 的2种方法
-      - [ ] 01 得到 二叉树 中序遍历序列 的方法1 常规法
-      - [ ] 02 得到 二叉树 中序遍历序列 的方法2 拍平法
-        - [ ] 01 拍平法 应用1 拍平法 在二叉排序树中 的应用
-        - [ ] 02 拍平法 应用2 拍平法 在B树中 的应用
+  - [x] 01 知识点
+    - [x] 01 得到 二叉树 中序遍历序列 的2种方法
+      - [x] 01 得到 二叉树 中序遍历序列 的方法1 常规法
+      - [x] 02 得到 二叉树 中序遍历序列 的方法2 拍平法
+        - [x] 01 拍平法 应用1 拍平法 在二叉排序树中 的应用
+        - [x] 02 拍平法 应用2 拍平法 在B树中 的应用
   
-  - [ ] 02 刷题
-    - [ ] 01 方法1：常规法
-    - [ ] 02 方法2：拍平法
+  - [x] 02 刷题
+    - [x] 01 方法1：常规法
+    - [x] 02 方法2：拍平法
+- [ ] 04 T4 2‘
