--- a/01 初试/01 408真题/01 24408/02 试卷分析.md
+++ b/01 初试/01 408真题/01 24408/02 试卷分析.md
@@ -27,13 +27,12 @@
       - [ ] 考察：邻接多重表 顶点的度
         - [ ] 01 知识点：邻接多重表 边结点结构
         - [ ] 02 知识点：求邻接多重表 顶点的度 的3种方法
-          - [ ] 01 求邻接多重表 顶点的度 方法1：
+          - [ ] 01 求邻接多重表 顶点的度 方法1：通过将邻接多重表转换成无向图求邻接多重表顶点的度
             - [ ] 01 邻接多重表 → 无向图
             - [ ] 02 求无向图 顶点的度
-          - [ ] 02 求邻接多重表 顶点的度 方法2：
+          - [ ] 02 求邻接多重表 顶点的度 方法2：通过将邻接多重表转换成邻接表求邻接多重表顶点的度
             - [ ] 01 邻接多重表 → 邻接表
             - [ ] 02 求邻接表 顶点的度
-          - [ ] 03 求邻接多重表 顶点的度 方法3：
-            - [ ] 01 直接通过邻接多重表 求顶点的度
+          - [ ] 03 求邻接多重表 顶点的度 方法3：直接通过邻接多重表求邻接多重表顶点的度
         - [ ] 03 总结
         - [ ] 04 易错点
