--- a/01 初试/01 408真题/01 24408/02 试卷分析.md
+++ b/01 初试/01 408真题/01 24408/02 试卷分析.md
@@ -5,14 +5,14 @@
         - [x] 01 知识点：一段语句序列对链表的影响 基本方法
         - [x] 02 刷题
         - [x] 03 总结 易错点
-      
+    
     - [x] 02 T2 2’
       - [x] 考察：中缀转后缀表达式
         - [x] 01 知识点：中缀转后缀表达式 2种方法
           - [x] 01 知识点：中缀转后缀表达式 方法1 中缀转后缀模拟
           - [x] 02 知识点：中缀转后缀表达式 方法2 求出表达式树
         - [x] 02 刷题
-      
+    
     - [x] 03 T3 2'
     
       - [x] 考察：二叉树 中序遍历序列
@@ -25,23 +25,27 @@
         - [x] 02 刷题
           - [x] 01 方法1：常规法
           - [x] 02 方法2：拍平法
-      
+    
     - [x] 04 T4 2’
       - [x] 考察：邻接多重表 顶点的度
-        - [ ] 01 邻接多重表 边结点结构
-        
-        - [ ] 02 求邻接多重表 顶点的度 的3种方法
-          - [ ] 01 求邻接多重表 顶点的度 方法1：通过将邻接多重表转换成无向图求邻接多重表顶点的度
-            - [ ] 01 邻接多重表 → 无向图
-            - [ ] 02 求无向图 顶点的度
-          - [ ] 02 求邻接多重表 顶点的度 方法2：通过将邻接多重表转换成邻接表求邻接多重表顶点的度
-            - [ ] 01 邻接多重表 → 邻接表
-            - [ ] 02 求邻接表 顶点的度
-          - [ ] 03 求邻接多重表 顶点的度 方法3：直接通过邻接多重表求邻接多重表顶点的度
+        - [x] 01 邻接多重表 边结点结构
+    
+        - [x] 02 求邻接多重表 顶点的度 的3种方法
+          - [x] 01 求邻接多重表 顶点的度 方法1：通过将邻接多重表转换成无向图求邻接多重表顶点的度
+            - [x] 01 邻接多重表 → 无向图
+            - [x] 02 求无向图 顶点的度
+          - [x] 02 求邻接多重表 顶点的度 方法2：通过将邻接多重表转换成邻接表求邻接多重表顶点的度
+            - [x] 01 邻接多重表 → 邻接表
+            - [x] 02 求邻接表 顶点的度
+          - [x] 03 求邻接多重表 顶点的度 方法3：直接通过邻接多重表求邻接多重表顶点的度
           
-        - [ ] 03 总结
-        
-        - [ ] 04 易错点
-        
-          
+        - [x] 03 总结
+    
+        - [x] 04 易错点
+    
+    - [ ] 05 T5 2‘
+    
+    - [ ] 
+    
+      
 
