--- a/01 初试/01 408真题/01 24408/02 试卷分析.md
+++ b/01 初试/01 408真题/01 24408/02 试卷分析.md
@@ -43,11 +43,10 @@
 
     - [x] 04 易错点
 
-- [ ] 05 T5 2‘
+- [ ] 05 T5 2‘ [05 单选5 2‘ 折半查找](01 刷题\01 单项选择题\05 单选5 2‘ 折半查找) 
 
-  - [ ] 考察：折半查找
+  - [ ] 考察：折半查找 
   - [ ] 
 
   
-
 
