--- a/01 初试/01 408真题/01 24408/02 试卷分析.md
+++ b/01 初试/01 408真题/01 24408/02 试卷分析.md
@@ -46,7 +46,15 @@
 - [ ] 05 T5 2‘ [05 单选5 2‘ 折半查找](01 刷题\01 单项选择题\05 单选5 2‘ 折半查找) 
 
   - [ ] 考察：折半查找 
-  - [ ] 
-
+    - [ ] 01 折半查找 2个概念：随机访问 顺序访问 
+    - [ ] 02 折半查找 逻辑
+    - [ ] 03 折半查找 需要完成的 2个功能
+    - [ ] 04 使用折半查找的 2个前提
+    - [ ] 05 链表 顺序表 静态链表 插入/删除 读/写第x个元素 时间复杂度
+    - [ ] 06 题目
+    - [ ] 07 折半查找 代码
+    - [ ] 08 升序序列 折半查找 示意图
+  
+  
   
 
