--- a/01 初试/01 408真题/01 24408/02 试卷分析.md
+++ b/01 初试/01 408真题/01 24408/02 试卷分析.md
@@ -5,14 +5,12 @@
     - [x] 01 知识点：一段语句序列对链表的影响 基本方法
     - [x] 02 刷题
     - [x] 03 总结 易错点
-
 - [x] 02 T2 2’ [02 单选2 2’ 中缀表达式转后缀表达式](01 刷题\01 单项选择题\02 单选2 2’ 中缀表达式转后缀表达式) 
   - [x] 考察：中缀转后缀表达式
     - [x] 01 知识点：中缀转后缀表达式 2种方法
       - [x] 01 知识点：中缀转后缀表达式 方法1 中缀转后缀模拟
       - [x] 02 知识点：中缀转后缀表达式 方法2 求出表达式树
     - [x] 02 刷题
-
 - [x] 03 T3 2' [03 单选3 2’ 二叉树 中序遍历序列](01 刷题\01 单项选择题\03 单选3 2’ 二叉树 中序遍历序列) 
 
   - [x] 考察：二叉树 中序遍历序列
@@ -25,7 +23,6 @@
     - [x] 02 刷题
       - [x] 01 方法1：常规法
       - [x] 02 方法2：拍平法
-
 - [x] 04 T4 2’ [04 单选4 2‘ 邻接多重表 顶点的度](01 刷题\01 单项选择题\04 单选4 2‘ 邻接多重表 顶点的度) 
   - [x] 考察：邻接多重表 顶点的度
     - [x] 01 邻接多重表 边结点结构
@@ -42,19 +39,15 @@
     - [x] 03 总结
 
     - [x] 04 易错点
+- [x] 05 T5 2‘ [05 单选5 2‘ 折半查找](01 刷题\01 单项选择题\05 单选5 2‘ 折半查找) 
 
-- [ ] 05 T5 2‘ [05 单选5 2‘ 折半查找](01 刷题\01 单项选择题\05 单选5 2‘ 折半查找) 
-
-  - [ ] 考察：折半查找 
-    - [ ] 01 折半查找 2个概念：随机访问 顺序访问 
-    - [ ] 02 折半查找 逻辑
-    - [ ] 03 折半查找 需要完成的 2个功能
-    - [ ] 04 使用折半查找的 2个前提
-    - [ ] 05 链表 顺序表 静态链表 插入/删除 读/写第x个元素 时间复杂度
-    - [ ] 06 题目
-    - [ ] 07 折半查找 代码
-    - [ ] 08 升序序列 折半查找 示意图
-  
-  
+  - [x] 考察：折半查找 
+    - [x] 01 折半查找 2个概念：随机访问 顺序访问 
+    - [x] 02 折半查找 逻辑
+    - [x] 03 折半查找 需要完成的 2个功能
+    - [x] 04 使用折半查找的 2个前提
+    - [x] 05 链表 顺序表 静态链表 插入/删除 读/写第x个元素 时间复杂度
+    - [x] 06 题目
+    - [x] 07 折半查找 代码
   
 
