--- a/01 初试/01 408真题/01 24408/02 试卷分析.md
+++ b/01 初试/01 408真题/01 24408/02 试卷分析.md
@@ -49,5 +49,12 @@
     - [x] 05 链表 顺序表 静态链表 插入/删除 读/写第x个元素 时间复杂度
     - [x] 06 题目
     - [x] 07 折半查找 代码
-  
+
+- [ ] 06 T6 2'
+  - [ ] 考察：改进型KMP算法
+    - [x] 01 视频整理：串的定义和基本操作
+    - [x] 02 视频整理：串 存储结构
+    - [ ] 03 视频整理：字符串 朴素模式匹配算法
+    - [ ] 04 视频整理：字符串 KMP算法
+
 
