--- a/01 初试/01 408真题/01 24408/02 试卷分析.md
+++ b/01 初试/01 408真题/01 24408/02 试卷分析.md
@@ -54,7 +54,7 @@
   - [ ] 考察：改进型KMP算法
     - [x] 01 视频整理：串的定义和基本操作
     - [x] 02 视频整理：串 存储结构
-    - [ ] 03 视频整理：字符串 朴素模式匹配算法
+    - [x] 03 视频整理：字符串 朴素模式匹配算法
     - [ ] 04 视频整理：字符串 KMP算法
-
+    - [ ] 05 视频整理：
 
