--- a/01 初试/01 408真题/01 24408/02 试卷分析.md
+++ b/01 初试/01 408真题/01 24408/02 试卷分析.md
@@ -51,10 +51,10 @@
     - [x] 07 折半查找 代码
 - [ ] 06 T6 2'
   - [ ] 考察：改进型KMP算法
-    - [x] 01 视频整理：串的定义和基本操作
-    - [x] 02 视频整理：串 存储结构
-    - [x] 03 视频整理：字符串 朴素模式匹配算法
-    - [ ] 04 视频整理：字符串 KMP算法
-    - [ ] 05 视频整理：KMP算法 求next数组
-    - [ ] 06 视频整理：KMP算法 进一步优化
+    - [x] 01 看懂视频：串的定义和基本操作
+    - [x] 02 看懂视频：串 存储结构
+    - [x] 03 看懂视频：字符串 朴素模式匹配算法
+    - [x] 04 看懂视频：字符串 KMP算法
+    - [x] 05 看懂视频：KMP算法 求next数组
+    - [x] 06 看懂视频：KMP算法 进一步优化
 
