--- a/01 初试/01 408真题/01 24408/02 试卷分析.md
+++ b/01 初试/01 408真题/01 24408/02 试卷分析.md
@@ -50,7 +50,7 @@
     - [x] 06 题目
     - [x] 07 折半查找 代码
 - [ ] 06 T6 2'
-  - [ ] 考察：修正后的KMP算法 右滑距离
+  - [x] 考察：手动求修正后的KMP算法的 nextval数组 右滑距离手动求修正后的KMP算法的nextval数组的步骤
     - [x] 01 看视频
       - [x] 01 看懂视频：串的定义和基本操作
       - [x] 02 看懂视频：串 存储结构
@@ -58,8 +58,9 @@
       - [x] 04 看懂视频：字符串 KMP算法
       - [x] 05 看懂视频：KMP算法 求next数组
       - [x] 06 看懂视频：KMP算法 进一步优化
-    - [ ] 02 知识点
+    - [x] 02 知识点
       - [x] 01 修正后的KMP算法
-      - [x] 02 右滑距离
-      - [ ] 03 求改进的KMP算法nextval数组的步骤
+      - [x] 02 手动求修正后的KMP算法的 nextval数组 的步骤
+      - [x] 03 右滑距离
+    - [x] 03 做题
 
