--- a/01 初试/01 408真题/01 24408/02 试卷分析.md
+++ b/01 初试/01 408真题/01 24408/02 试卷分析.md
@@ -1,4 +1,4 @@
-# 01 单项选择题
+# 01 单项选择题 16'
 
 - [x] 01 T1 2‘  [01 单选1 2' 一段语句序列对链表的影响](01 刷题\01 单项选择题\01 单选1 2' 一段语句序列对链表的影响) 
   - [x] 考察：一段语句序列对链表的影响
@@ -49,7 +49,7 @@
     - [x] 05 链表 顺序表 静态链表 插入/删除 读/写第x个元素 时间复杂度
     - [x] 06 题目
     - [x] 07 折半查找 代码
-- [ ] 06 T6 2'
+- [x] 06 T6 2' [06 单选6 2‘ 手动求修正后的KMP算法的 nextval数组 右滑距离](01 刷题\01 单项选择题\06 单选6 2‘ 手动求修正后的KMP算法的 nextval数组 右滑距离) 
   - [x] 考察：手动求修正后的KMP算法的 nextval数组 右滑距离手动求修正后的KMP算法的nextval数组的步骤
     - [x] 01 看视频
       - [x] 01 看懂视频：串的定义和基本操作
@@ -63,4 +63,15 @@
       - [x] 02 手动求修正后的KMP算法的 nextval数组 的步骤
       - [x] 03 右滑距离
     - [x] 03 做题
+- [ ] 07 T7 2’
+  - [ ] 
+
+
+
+
+# 02 综合应用题 22'
+
+- [ ] 01 T41 13'
+  - [ ] 
+- [ ] 07 T47 9'
 
