--- a/01 初试/01 408真题/01 24408/02 试卷分析.md
+++ b/01 初试/01 408真题/01 24408/02 试卷分析.md
@@ -63,15 +63,22 @@
       - [x] 02 手动求修正后的KMP算法的 nextval数组 的步骤
       - [x] 03 右滑距离
     - [x] 03 做题
-- [ ] 07 T7 2’
-  - [ ] 
+- [ ] 07 T7 2’ [07 单选7 2’ 二叉搜索树](01 刷题\01 单项选择题\07 单选7 2’ 二叉搜索树) 
+  - [x] 考察：二叉搜索树/二叉排序树
+    - [x] 01 二叉搜索树/二叉排序树的概念
+    - [x] 02 得到二叉搜索树/二叉排序树按照关键字递增的顺序排列的升序序列的2种方法
+      - [x] 01 拍平法得到二叉搜索树/二叉排序树按照关键字递增的顺序排列的升序序列
+      - [x] 02  常规法得到二叉搜索树/二叉排序树按照关键字递增的顺序排列的升序序列
+    - [ ] 03 易错点
+    - [ ] 04 做题
+- [ ] 08 T8 2‘ [08 单选8 2‘ 快速排序 分块 基本概念](01 刷题\01 单项选择题\08 单选8 2‘ 快速排序 分块 基本概念) 
 
 
 
 
 # 02 综合应用题 22'
 
-- [ ] 01 T41 13'
+- [ ] 01 T41 13' [01 41 13‘ 拓扑排序](01 刷题\02 综合应用题\01 41 13‘ 拓扑排序) 
   - [ ] 
-- [ ] 07 T47 9'
+- [ ] 07 T47 9' [07 47 9’ BGP的路由选择协议](01 刷题\02 综合应用题\07 47 9’ BGP的路由选择协议) 
 
