--- a/01 初试/01 408真题/01 24408/02 试卷分析.md
+++ b/01 初试/01 408真题/01 24408/02 试卷分析.md
@@ -1,4 +1,4 @@
-# 01 单项选择题 16'
+# 01 单项选择题 20'
 
 - [x] 01 T1 2‘  [01 单选1 2' 一段语句序列对链表的影响](01 刷题\01 单项选择题\01 单选1 2' 一段语句序列对链表的影响) 
   - [x] 考察：一段语句序列对链表的影响
@@ -75,7 +75,13 @@
       - [x] 02 方法2：常规法得到二叉搜索树/二叉排序树按关键字顺序升序排列的升序序列
       - [x] 03 方法3：根据二叉排序树/二叉搜索树的定义
 - [ ] 08 T8 2‘ [08 单选8 2‘ 快速排序 分块 基本概念](01 刷题\01 单项选择题\08 单选8 2‘ 快速排序 分块 基本概念) 
-  - [ ] 
+  - [ ] 考察：快速排序 分块 基本概念
+    - [ ] 01 排序 基本概念
+    - [ ] 02 分块 基本概念
+    - [ ] 03 刷题
+    - [ ] 04 总结
+    - [ ] 05 拓展
+- [ ] 09 T9 2’
 
 
 
