--- a/01 初试/01 408真题/01 24408/02 试卷分析.md
+++ b/01 初试/01 408真题/01 24408/02 试卷分析.md
@@ -78,10 +78,10 @@
   - [ ] 考察：快速排序 分块 基本概念
     - [ ] 01 排序 基本概念
     - [ ] 02 分块 基本概念
-    - [ ] 03 刷题
-    - [ ] 04 总结
-    - [ ] 05 拓展
+    - [ ] 03 拓展
+    - [ ] 04 刷题
 - [ ] 09 T9 2’
+- [ ] 10 T10 2’
 
 
 
@@ -91,5 +91,5 @@
 
 - [ ] 01 T41 13' [01 41 13‘ 拓扑排序](01 刷题\02 综合应用题\01 41 13‘ 拓扑排序) 
   - [ ] 
-- [ ] 07 T47 9' [07 47 9’ BGP的路由选择协议](01 刷题\02 综合应用题\07 47 9’ BGP的路由选择协议) 
+- [x] 07 T47 9' [07 47 9’ BGP的路由选择协议](01 刷题\02 综合应用题\07 47 9’ BGP的路由选择协议) 
 
