--- a/01 初试/01 408真题/01 24408/02 试卷分析.md
+++ b/01 初试/01 408真题/01 24408/02 试卷分析.md
@@ -74,12 +74,15 @@
       - [x] 01 方法1：拍平法得到二叉搜索树/二叉排序树按关键宇顺序升序排列的升序序列
       - [x] 02 方法2：常规法得到二叉搜索树/二叉排序树按关键字顺序升序排列的升序序列
       - [x] 03 方法3：根据二叉排序树/二叉搜索树的定义
-- [ ] 08 T8 2‘ [08 单选8 2‘ 快速排序 分块 基本概念](01 刷题\01 单项选择题\08 单选8 2‘ 快速排序 分块 基本概念) 
-  - [ ] 考察：快速排序 分块 基本概念
-    - [ ] 01 排序 基本概念
-    - [ ] 02 分块 基本概念
-    - [ ] 03 拓展
-    - [ ] 04 刷题
+- [x] 08 T8 2‘ [08 单选8 2‘ 快速排序 分块 基本概念](01 刷题\01 单项选择题\08 单选8 2‘ 快速排序 分块 基本概念) 
+  - [x] 考察：快速排序 分块 基本概念
+    - [x] 01 知识点
+      - [x] 01 排序 基本概念
+      - [x] 02 分块 基本概念
+      - [x] 03 拓展
+      - [x] 04 快速排序 一趟排序 例题
+    - [x] 02 刷题
+    - [x] 03 看懂视频：2025年数据结构考点讲解/排序/交换排序/快速排序
 - [ ] 09 T9 2’
 - [ ] 10 T10 2’
 
