--- a/01 初试/01 408真题/01 24408/02 试卷分析.md
+++ b/01 初试/01 408真题/01 24408/02 试卷分析.md
@@ -81,6 +81,9 @@
       - [x] 02 分块 基本概念
       - [x] 03 拓展
       - [x] 04 快速排序 一趟排序 例题
+        - [x]  01 快速排序 一趟排序 例题1
+        - [x]  02 快速排序 一趟排序 例题2
+        - [x]  03 快速排序 一趟排序 例题3
     - [x] 02 刷题
     - [x] 03 看懂视频：2025年数据结构考点讲解/排序/交换排序/快速排序
 - [ ] 09 T9 2’
