--- a/01 初试/01 408真题/01 24408/02 试卷分析.md
+++ b/01 初试/01 408真题/01 24408/02 试卷分析.md
@@ -86,7 +86,9 @@
         - [x]  03 快速排序 一趟排序 例题3
     - [x] 02 刷题
     - [x] 03 看懂视频：2025年数据结构考点讲解/排序/交换排序/快速排序
-- [ ] 09 T9 2’
+- [ ] 09 T9 2’ [09 单选9 2‘ 堆 删除操作](01 刷题\01 单项选择题\09 单选9 2‘ 堆 删除操作) 
+  - [ ] 01 
+
 - [ ] 10 T10 2’
 
 
