--- a/01 初试/01 408真题/01 24408/02 试卷分析.md
+++ b/01 初试/01 408真题/01 24408/02 试卷分析.md
@@ -1,16 +1,18 @@
-# 01 单项选择题 20'
+# 01 单项选择题 22'
 
 - [x] 01 T1 2‘  [01 单选1 2' 一段语句序列对链表的影响](01 刷题\01 单项选择题\01 单选1 2' 一段语句序列对链表的影响) 
   - [x] 考察：一段语句序列对链表的影响
     - [x] 01 知识点：一段语句序列对链表的影响 基本方法
     - [x] 02 刷题
     - [x] 03 总结 易错点
+  
 - [x] 02 T2 2’ [02 单选2 2’ 中缀表达式转后缀表达式](01 刷题\01 单项选择题\02 单选2 2’ 中缀表达式转后缀表达式) 
   - [x] 考察：中缀转后缀表达式
     - [x] 01 知识点：中缀转后缀表达式 2种方法
       - [x] 01 知识点：中缀转后缀表达式 方法1 中缀转后缀模拟
       - [x] 02 知识点：中缀转后缀表达式 方法2 求出表达式树
     - [x] 02 刷题
+  
 - [x] 03 T3 2' [03 单选3 2’ 二叉树 中序遍历序列](01 刷题\01 单项选择题\03 单选3 2’ 二叉树 中序遍历序列) 
 
   - [x] 考察：二叉树 中序遍历序列
@@ -23,6 +25,7 @@
     - [x] 02 刷题
       - [x] 01 方法1：常规法
       - [x] 02 方法2：拍平法
+  
 - [x] 04 T4 2’ [04 单选4 2‘ 邻接多重表 顶点的度](01 刷题\01 单项选择题\04 单选4 2‘ 邻接多重表 顶点的度) 
   - [x] 考察：邻接多重表 顶点的度
     - [x] 01 邻接多重表 边结点结构
@@ -39,6 +42,7 @@
     - [x] 03 总结
 
     - [x] 04 易错点
+  
 - [x] 05 T5 2‘ [05 单选5 2‘ 折半查找](01 刷题\01 单项选择题\05 单选5 2‘ 折半查找) 
 
   - [x] 考察：折半查找 
@@ -49,6 +53,7 @@
     - [x] 05 链表 顺序表 静态链表 插入/删除 读/写第x个元素 时间复杂度
     - [x] 06 题目
     - [x] 07 折半查找 代码
+  
 - [x] 06 T6 2' [06 单选6 2‘ 手动求修正后的KMP算法的 nextval数组 右滑距离](01 刷题\01 单项选择题\06 单选6 2‘ 手动求修正后的KMP算法的 nextval数组 右滑距离) 
   - [x] 考察：手动求修正后的KMP算法的 nextval数组 右滑距离手动求修正后的KMP算法的nextval数组的步骤
     - [x] 01 看视频
@@ -63,6 +68,7 @@
       - [x] 02 手动求修正后的KMP算法的 nextval数组 的步骤
       - [x] 03 右滑距离
     - [x] 03 做题
+  
 - [x] 07 T7 2’ [07 单选7 2’ 二叉搜索树](01 刷题\01 单项选择题\07 单选7 2’ 二叉搜索树) 
   - [x] 考察：二叉搜索树/二叉排序树
     - [x] 01 二叉搜索树/二叉排序树的概念
@@ -74,6 +80,7 @@
       - [x] 01 方法1：拍平法得到二叉搜索树/二叉排序树按关键宇顺序升序排列的升序序列
       - [x] 02 方法2：常规法得到二叉搜索树/二叉排序树按关键字顺序升序排列的升序序列
       - [x] 03 方法3：根据二叉排序树/二叉搜索树的定义
+  
 - [x] 08 T8 2‘ [08 单选8 2‘ 快速排序 分块 基本概念](01 刷题\01 单项选择题\08 单选8 2‘ 快速排序 分块 基本概念) 
   - [x] 考察：快速排序 分块 基本概念
     - [x] 01 知识点
@@ -86,10 +93,29 @@
         - [x]  03 快速排序 一趟排序 例题3
     - [x] 02 刷题
     - [x] 03 看懂视频：2025年数据结构考点讲解/排序/交换排序/快速排序
+  
 - [ ] 09 T9 2’ [09 单选9 2‘ 堆 删除操作](01 刷题\01 单项选择题\09 单选9 2‘ 堆 删除操作) 
-  - [ ] 01 
+  - [x] 考察：堆的删除操作
 
-- [ ] 10 T10 2’
+    - [ ] 01 知识点
+  
+      - [ ] 01 堆的删除操作
+  
+      - [ ] 02 大(小)根堆中调整元素x
+  
+      - [ ] 03 堆排序
+  
+    - [ ] 02 刷题
+  
+- [ ] 10 T10 2’ [10 单选10 2‘ 归并操作](01 刷题\01 单项选择题\10 单选10 2‘ 归并操作) 
+
+  - [ ] 考察：归并操作
+    - [ ] 
+
+- [ ] 11 T11 2‘ [11 单选11 2‘ 外部排序 多路归并 败者树](01 刷题\01 单项选择题\11 单选11 2‘ 外部排序 多路归并 败者树) 
+
+  - [ ] 考察：外部排序 多路归并 败者树
+
 
 
 
@@ -99,5 +125,6 @@
 
 - [ ] 01 T41 13' [01 41 13‘ 拓扑排序](01 刷题\02 综合应用题\01 41 13‘ 拓扑排序) 
   - [ ] 
+    - [ ] 
 - [x] 07 T47 9' [07 47 9’ BGP的路由选择协议](01 刷题\02 综合应用题\07 47 9’ BGP的路由选择协议) 
 
