--- a/01 初试/01 408真题/01 24408/02 试卷分析.md
+++ b/01 初试/01 408真题/01 24408/02 试卷分析.md
@@ -4,18 +4,18 @@
 
 ## 01 数据结构 22’ = 2‘ × 11
 
-- [x] 01 T1 2‘  [01 单选1 2' 一段语句序列对链表的影响](01 刷题\01 单项选择题\01 单选1 2' 一段语句序列对链表的影响) 
+- [x] 01 T1 2‘    [01 单选1 2' 一段语句序列对链表的影响](01 刷题\01 单项选择题 80' = 2'  × 40\01 数据结构 22’ = 2‘ × 11\01 单选1 2' 一段语句序列对链表的影响) 
   - [x] 考察：一段语句序列对链表的影响
     - [x] 01 知识点：一段语句序列对链表的影响 基本方法
     - [x] 02 刷题
     - [x] 03 总结 易错点
-- [x] 02 T2 2’ [02 单选2 2’ 中缀表达式转后缀表达式](01 刷题\01 单项选择题\02 单选2 2’ 中缀表达式转后缀表达式) 
+- [x] 02 T2 2’  [02 单选2 2’ 中缀表达式转后缀表达式](01 刷题\01 单项选择题 80' = 2'  × 40\01 数据结构 22’ = 2‘ × 11\02 单选2 2’ 中缀表达式转后缀表达式) 
   - [x] 考察：中缀转后缀表达式
     - [x] 01 知识点：中缀转后缀表达式 2种方法
       - [x] 01 知识点：中缀转后缀表达式 方法1 中缀转后缀模拟
       - [x] 02 知识点：中缀转后缀表达式 方法2 求出表达式树
     - [x] 02 刷题
-- [x] 03 T3 2' [03 单选3 2’ 二叉树 中序遍历序列](01 刷题\01 单项选择题\03 单选3 2’ 二叉树 中序遍历序列) 
+- [x] 03 T3 2'  [03 单选3 2’ 二叉树 中序遍历序列](01 刷题\01 单项选择题 80' = 2'  × 40\01 数据结构 22’ = 2‘ × 11\03 单选3 2’ 二叉树 中序遍历序列) 
 
   - [x] 考察：二叉树 中序遍历序列
     - [x] 01 知识点
@@ -27,7 +27,7 @@
     - [x] 02 刷题
       - [x] 01 方法1：常规法
       - [x] 02 方法2：拍平法
-- [x] 04 T4 2’ [04 单选4 2‘ 邻接多重表 顶点的度](01 刷题\01 单项选择题\04 单选4 2‘ 邻接多重表 顶点的度) 
+- [x] 04 T4 2’  [04 单选4 2‘ 邻接多重表 顶点的度](01 刷题\01 单项选择题 80' = 2'  × 40\01 数据结构 22’ = 2‘ × 11\04 单选4 2‘ 邻接多重表 顶点的度) 
   - [x] 考察：邻接多重表 顶点的度
     - [x] 01 邻接多重表 边结点结构
 
@@ -104,15 +104,15 @@
     - [x] 02 刷题
 - [x] 10 T10 2’ [10 单选10 2‘ 归并操作](01 刷题\01 单项选择题\10 单选10 2‘ 归并操作) 
 
-  - [ ] 考察：归并操作
-    - [ ] 01 知识点
-      - [ ] 01 归并两个升(降)序序列a、 b
-      - [ ] 02 归并操作 最好情况
-      - [ ] 03 归并操作 最坏情况
-      - [ ] 04 归并的条件
-      - [ ] 05 归并操作 顺序表(数组)代码
-      - [ ] 06 归并操作 链表代码
-    - [ ] 02 刷题
+  - [x] 考察：归并操作
+    - [x] 01 知识点
+      - [x] 01 归并两个升(降)序序列a、 b
+      - [x] 02 归并操作 最好情况
+      - [x] 03 归并操作 最坏情况
+      - [x] 04 归并的条件
+      - [x] 05 归并操作 顺序表(数组)代码
+      - [x] 06 归并操作 链表代码
+    - [x] 02 刷题
 - [x] 11 T11 2‘ [11 单选11 2‘ 外部排序 多路归并 败者树](01 刷题\01 单项选择题\11 单选11 2‘ 外部排序 多路归并 败者树) 
 
   - [ ] 考察：外部排序 多路归并 败者树
