--- a/01 初试/01 408真题/01 24408/02 试卷分析.md
+++ b/01 初试/01 408真题/01 24408/02 试卷分析.md
@@ -43,7 +43,7 @@
     - [x] 03 总结
 
     - [x] 04 易错点
-- [x] 05 T5 2‘ [05 单选5 2‘ 折半查找](01 刷题\01 单项选择题\05 单选5 2‘ 折半查找) 
+- [x] 05 T5 2‘  [05 单选5 2‘ 折半查找](01 刷题\01 单项选择题 80' = 2'  × 40\01 数据结构 22’ = 2‘ × 11\05 单选5 2‘ 折半查找) 
 
   - [x] 考察：折半查找 
     - [x] 01 折半查找 2个概念：随机访问 顺序访问 
@@ -53,7 +53,7 @@
     - [x] 05 链表 顺序表 静态链表 插入/删除 读/写第x个元素 时间复杂度
     - [x] 06 题目
     - [x] 07 折半查找 代码
-- [x] 06 T6 2' [06 单选6 2‘ 手动求修正后的KMP算法的 nextval数组 右滑距离](01 刷题\01 单项选择题\06 单选6 2‘ 手动求修正后的KMP算法的 nextval数组 右滑距离) 
+- [x] 06 T6 2'  [06 单选6 2‘ 手动求修正后的KMP算法的 nextval数组 右滑距离](01 刷题\01 单项选择题 80' = 2'  × 40\01 数据结构 22’ = 2‘ × 11\06 单选6 2‘ 手动求修正后的KMP算法的 nextval数组 右滑距离) 
   - [x] 考察：手动求修正后的KMP算法的 nextval数组 右滑距离手动求修正后的KMP算法的nextval数组的步骤
     - [x] 01 看视频
       - [x] 01 看懂视频：串的定义和基本操作
@@ -67,7 +67,7 @@
       - [x] 02 手动求修正后的KMP算法的 nextval数组 的步骤
       - [x] 03 右滑距离
     - [x] 03 做题
-- [x] 07 T7 2’ [07 单选7 2’ 二叉搜索树](01 刷题\01 单项选择题\07 单选7 2’ 二叉搜索树) 
+- [x] 07 T7 2’  [07 单选7 2’ 二叉搜索树](01 刷题\01 单项选择题 80' = 2'  × 40\01 数据结构 22’ = 2‘ × 11\07 单选7 2’ 二叉搜索树) 
   - [x] 考察：二叉搜索树/二叉排序树
     - [x] 01 二叉搜索树/二叉排序树的概念
     - [x] 02 得到二叉搜索树/二叉排序树按照关键字递增的顺序排列的升序序列的2种方法
@@ -78,7 +78,7 @@
       - [x] 01 方法1：拍平法得到二叉搜索树/二叉排序树按关键宇顺序升序排列的升序序列
       - [x] 02 方法2：常规法得到二叉搜索树/二叉排序树按关键字顺序升序排列的升序序列
       - [x] 03 方法3：根据二叉排序树/二叉搜索树的定义
-- [x] 08 T8 2‘ [08 单选8 2‘ 快速排序 分块 基本概念](01 刷题\01 单项选择题\08 单选8 2‘ 快速排序 分块 基本概念) 
+- [x] 08 T8 2‘  [08 单选8 2‘ 快速排序 分块 基本概念](01 刷题\01 单项选择题 80' = 2'  × 40\01 数据结构 22’ = 2‘ × 11\08 单选8 2‘ 快速排序 分块 基本概念) 
   - [x] 考察：快速排序 分块 基本概念
     - [x] 01 知识点
       - [x] 01 排序 基本概念
@@ -90,7 +90,7 @@
         - [x]  03 快速排序 一趟排序 例题3
     - [x] 02 刷题
     - [x] 03 看懂视频：2025年数据结构考点讲解/排序/交换排序/快速排序
-- [x] 09 T9 2’ [09 单选9 2‘ 堆 删除操作](01 刷题\01 单项选择题\09 单选9 2‘ 堆 删除操作) 
+- [x] 09 T9 2’  [09 单选9 2‘ 堆 删除操作](01 刷题\01 单项选择题 80' = 2'  × 40\01 数据结构 22’ = 2‘ × 11\09 单选9 2‘ 堆 删除操作) 
   - [x] 考察：堆的删除操作
 
     - [x] 01 知识点
@@ -102,8 +102,7 @@
       - [x] 03 堆排序
   
     - [x] 02 刷题
-- [x] 10 T10 2’ [10 单选10 2‘ 归并操作](01 刷题\01 单项选择题\10 单选10 2‘ 归并操作) 
-
+- [x] 10 T10 2’  [10 单选10 2‘ 归并操作](01 刷题\01 单项选择题 80' = 2'  × 40\01 数据结构 22’ = 2‘ × 11\10 单选10 2‘ 归并操作) 
   - [x] 考察：归并操作
     - [x] 01 知识点
       - [x] 01 归并两个升(降)序序列a、 b
@@ -113,7 +112,7 @@
       - [x] 05 归并操作 顺序表(数组)代码
       - [x] 06 归并操作 链表代码
     - [x] 02 刷题
-- [x] 11 T11 2‘ [11 单选11 2‘ 外部排序 多路归并 败者树](01 刷题\01 单项选择题\11 单选11 2‘ 外部排序 多路归并 败者树) 
+- [x] 11 T11 2‘  [11 单选11 2‘ 外部排序 多路归并 败者树](01 刷题\01 单项选择题 80' = 2'  × 40\01 数据结构 22’ = 2‘ × 11\11 单选11 2‘ 外部排序 多路归并 败者树) 
 
   - [ ] 考察：外部排序 多路归并 败者树
     - [ ] 01 知识点
