--- a/01 初试/01 408真题/01 24408/02 试卷分析.md
+++ b/01 初试/01 408真题/01 24408/02 试卷分析.md
@@ -94,13 +94,13 @@
   - [x] 考察：堆的删除操作
 
     - [x] 01 知识点
-  
+
       - [x] 01 堆的删除操作
-  
+
       - [x] 02 大(小)根堆中调整元素x
-  
+
       - [x] 03 堆排序
-  
+
     - [x] 02 刷题
 - [x] 10 T10 2’  [10 单选10 2‘ 归并操作](01 刷题\01 单项选择题 80' = 2'  × 40\01 数据结构 22’ = 2‘ × 11\10 单选10 2‘ 归并操作) 
   - [x] 考察：归并操作
@@ -113,10 +113,13 @@
       - [x] 06 归并操作 链表代码
     - [x] 02 刷题
 - [x] 11 T11 2‘  [11 单选11 2‘ 外部排序 多路归并 败者树](01 刷题\01 单项选择题 80' = 2'  × 40\01 数据结构 22’ = 2‘ × 11\11 单选11 2‘ 外部排序 多路归并 败者树) 
-
   - [ ] 考察：外部排序 多路归并 败者树
     - [ ] 01 知识点
+      - [ ] 01 归并多个升（降）序序列
+      - [ ] 02 外部排序
+      - [ ] 03 升序序列的败者树
     - [ ] 02 刷题
+- [ ] 12 T12 2‘ 
 
 
 
