--- a/01 初试/01 408真题/01 24408/02 试卷分析.md
+++ b/01 初试/01 408真题/01 24408/02 试卷分析.md
@@ -113,7 +113,10 @@
       - [x] 06 归并操作 链表代码
     - [x] 02 刷题
 - [x] 11 T11 2‘  [11 单选11 2‘ 外部排序 多路归并 败者树](01 刷题\01 单项选择题 80' = 2'  × 40\01 数据结构 22’ = 2‘ × 11\11 单选11 2‘ 外部排序 多路归并 败者树) 
-  - [ ] 考察：外部排序 多路归并 败者树
+  - [x] 考察：外部排序 多路归并 败者树
+    - [x] 01 看懂视频
+      - [x] 01 2025年数据结构考点讲解/第八章排序/外部排序
+      - [x] 02 2025年数据结构考点讲解/第八章排序/败者树
     - [ ] 01 知识点
       - [ ] 01 归并多个升（降）序序列
       - [ ] 02 外部排序
