--- a/01 初试/01 408真题/01 24408/02 试卷分析.md
+++ b/01 初试/01 408真题/01 24408/02 试卷分析.md
@@ -117,12 +117,15 @@
     - [x] 01 看懂视频
       - [x] 01 2025年数据结构考点讲解/第八章排序/外部排序
       - [x] 02 2025年数据结构考点讲解/第八章排序/败者树
-    - [ ] 01 知识点
-      - [ ] 01 归并多个升（降）序序列
-      - [ ] 02 外部排序
-      - [ ] 03 升序序列的败者树
-    - [ ] 02 刷题
+    - [x] 01 知识点
+      - [x] 01 归并多个升（降）序序列
+      - [x] 02 外部排序
+      - [x] 03 升序序列的败者树
+    - [x] 02 刷题
 - [ ] 12 T12 2‘ 
+  - [ ] 考察：定点整数的类型转换
+  - [ ] 01 
+
 
 
 
