--- a/01 初试/01 408真题/01 24408/02 试卷分析.md
+++ b/01 初试/01 408真题/01 24408/02 试卷分析.md
@@ -124,7 +124,16 @@
     - [x] 02 刷题
 - [ ] 12 T12 2‘ 
   - [ ] 考察：定点整数的类型转换
-  - [ ] 01 
+  
+    - [ ] 01 知识点
+      - [ ] 01 机器数
+      - [ ] 02 真值
+      - [ ] 03 定点整数的不同类型转换（考虑机器数）
+      - [ ] 04 重要数值
+      - [ ] 05 求补操作
+    - [ ] 02 刷题
+  
+    
 
 
 
