--- a/01 初试/01 408真题/01 24408/02 试卷分析.md
+++ b/01 初试/01 408真题/01 24408/02 试卷分析.md
@@ -122,16 +122,16 @@
       - [x] 02 外部排序
       - [x] 03 升序序列的败者树
     - [x] 02 刷题
-- [ ] 12 T12 2‘ 
-  - [ ] 考察：定点整数的类型转换
+- [x] 12 T12 2‘  [01 单选12 2‘ 定点整数的类型转换](01 刷题\01 单项选择题 80' = 2'  × 40\02 组成原理\01 单选12 2‘ 定点整数的类型转换) 
+  - [x] 考察：定点整数的类型转换
   
-    - [ ] 01 知识点
-      - [ ] 01 机器数
-      - [ ] 02 真值
-      - [ ] 03 定点整数的不同类型转换（考虑机器数）
-      - [ ] 04 重要数值
-      - [ ] 05 求补操作
-    - [ ] 02 刷题
+    - [x] 01 知识点
+      - [x] 01 机器数
+      - [x] 02 真值
+      - [x] 03 定点整数的不同类型转换（考虑机器数）
+      - [x] 04 重要数值
+      - [x] 05 求补操作
+    - [x] 02 刷题
   
     
 
